--- a/localisation/braz_por/MD_counter_ui_l_braz_por.yml
+++ b/localisation/braz_por/MD_counter_ui_l_braz_por.yml
@@ -39,7 +39,7 @@
  TOPBAR_FIELD_STRENGTH_TITLE: "Força de Campo"
  TOPBAR_PROTESTS_TITLE: "Força de Protesto"
  TOPBAR_FOREIGN_INFLUENCING_TITLE: "Influência Estrangeira"
- TOPBAR_EUROSCEPTICISM_TITLE: "Euroscepticismo"
+ TOPBAR_EUROSCEPTICISM_TITLE: "União Europeia"
  TOPBAR_LIST_CASUALTIES_TOOLTIP: "Baixas"
  TOPBAR_LIST_SURRENDER_TOOLTIP: "Progresso de Rendição"
  TOPBAR_LIST_STRENGTH_RATIO_TOOLTIP: "Proporção de Força"
