--- a/localisation/braz_por/MD_focus_BLR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_BLR_l_braz_por.yml
@@ -426,7 +426,7 @@
  BLR_Adopt_EU_Intellectual: "Adotar Leis de Propriedade Intelectual da UE"
  BLR_Adopt_EU_Intellectual_desc: "As leis de propriedade intelectual da UE precisam ser adotadas para cumprir os padrões europeus nessa área."
  BLR_Digitalization: "Digitalização"
- BLR_Digitalization_desc: "É necessário digitalizar a produção para melhorar sua qualidade."
+ BLR_Digitalization_desc: "É necessário digitalizar a produção para melhorar a sua qualidade."
  BLR_political_platforms: "Criação de Plataformas Políticas para Empresas Estrangeiras"
  BLR_political_platforms_desc: "Talvez devêssemos permitir isso para empresas estrangeiras?"
  BLR_Custom_Institutional_reforms: "Biocombustível"
