--- a/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_GEO_l_braz_por.yml
@@ -921,24 +921,23 @@
  GEO_kulev_terminal_desc: "Vamos gastar dinheiro para construir um terminal de petróleo e receberemos mais dinheiro em retorno!"
  GEO_polminmeet_desc: "Mais amigos não vão nos prejudicar."
  ARM_GEO_rebellion_category: "Questão de Djavakheti"
- ARM_GEO_rebellion_category_desc: "A região de Samtskhe-Djavakheti, na Geórgia, é em grande parte habitada por armênios étnicos. Ao contrário dos ossetianos e abecásios, eles não se rebelaram, mas isso pode acontecer em breve."
+ ARM_GEO_rebellion_category_desc: "A região de Samtskhe-Djavakheti, na Geórgia, é amplamente povoada por armênios étnicos. Os ossétios e os abkhazianos rebelaram-se, mas os arménios na Geórgia não. É possível que, se continuarmos a negociar e a instigar a situação, eles também se rebelem."
  ARM_GEO_rebellion: "Rebelião Armênia!"
  arm_didnt_spport: "A Armênia não apoiou a rebelião em Djavakhq!"
  ARM_rebellion_propaganda_lev: "Campanha de propaganda armênia"
- ARM_start_talking_proces: "Iniciar negociações de paz mútua"
- ARM_rebellion_propaganda: "Aumentar as tensões étnicas em Djavakhq!"
+ ARM_rebellion_propaganda: "Instigar tensões étnicas"
  ARM_send_weapons: "Contrabandear armas para Djavakhq"
  GEO_expand_autonomy: "Prometer expansão da autonomia"
  GEO_raids_police: "Desarmar o povo"
  ARM_djavakhq: "Liberte Djavakhq"
- geo_misc.9.t: "Proposta de Compromisso para Djavakhq!"
- geo_misc.9.d: "A outra parte propõe um novo acordo para conceder mais autonomia política, cultural e manter boas relações entre os países em Djavakheti!"
- geo_misc.9.a: "Estamos prontos para o processo de negociação. Aumentar a autonomia resolveria o problema."
+ geo_misc.9.t: "Proposta de compromisso de Djavakhq"
+ geo_misc.9.d: "[FROM.GetName] propôs uma proposta de paz relativa à questão Djavakhq. A solução proposta é permitir aos Arménios um certo grau de autonomia. Eles teorizam que isso impedirá os arménios de se sentirem como se não estivessem representados no governo e permitiria ao governo georgiano a capacidade de manter o controlo sobre os seus territórios. Como respondemos? Estamos dispostos a sentar-nos à mesa de negociações?"
+ geo_misc.9.a: "A autonomia resolveria o problema."
  geo_misc.9.b: "Você está brincando? Djavakhq deve ser livre!"
  geo_misc.9.c: "Estamos prontos para iniciar as conversas sobre o aumento da autonomia..."
  geo_misc.9.d1: "Samtskhe-Djavakheti é legítimamente nossa!"
  geo_misc.10.t: "Aumento da Autonomia em Djavakhq."
- geo_misc.10.d: "Agora, chegou a hora de finalmente assinar a resolução. Djavakheti receberá um status de autonomia religiosa, cultural e linguística."
+ geo_misc.10.d: "Agora chegou a hora de finalmente assinar a resolução. Djavakheti obterá um estatuto de autonomia religiosa, cultural e linguística. Vamos dar o próximo passo?"
  geo_misc.10.a: "Concordamos com esses termos."
  geo_misc.10.b: "Estamos prontos para conceder um status especial."
  geo_misc.11.t: "Proposta da SSR Georgiana"
@@ -947,3 +946,7 @@
  geo_misc.11.b: "Talvez pelo bem do outubro vermelho..."
  GEO_peaceful_nats: "Nacionalistas Pacíficos"
  GEO_peaceful_nats_desc: "Nacionalistas Pacíficos"
+ ARM_GEO_drafting_peace_proposal: "Elaboração de uma proposta de paz para Djavakheti"
+ ARM_start_talking_process: "Iniciar conversações de paz mútua"
+ ARM_start_talking_process_desc: "É hora de iniciar conversações de paz mútuas com o governo georgiano para discutir a paz entre os arménios de Samtskhe-Javakheti e eles próprios."
+ ARM_rebellion_propaganda_desc: "Monopolizar esta situação permitir-nos-á trazer estes arménios de volta ao nosso território e eliminar a opressão do nosso povo. Deveríamos mostrar-lhes que os apoiamos e instigar as tensões entre o povo de Djavakhq e o governo georgiano."
