--- a/localisation/braz_por/MD_focus_ITA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_ITA_l_braz_por.yml
@@ -1955,16 +1955,16 @@
  ITA_modify_agricolture_productivity_modifier_effect_TT: "§YProdutividade da Agricultura§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
  ITA_modify_civilian_factories_productivity_effect_TT: "§YProdutividade das Fábricas Civis§!: [?ITA_civilian_factories_productivity_change|%+]\n"
  ITA_modify_military_factories_productivity_effect_TT: "§YProdutividade das Fábricas Militares§!: [?ITA_military_factories_productivity_change|%+]\n"
- ITA_modify_dockyard_productivity_effect_TT: "§YProdutividade dos Estaleiros§§!: [?ITA_dockyard_productivity_change|%+]\n"
- ITA_modify_offices_productivity_effect_TT: "§YProdutividade dos Escritórios§§!: [?ITA_offices_productivity_change|%+]\n"
+ ITA_modify_dockyard_productivity_effect_TT: "§YProdutividade dos Estaleiros§!: [?ITA_dockyard_productivity_change|%+]\n"
+ ITA_modify_offices_productivity_effect_TT: "§YProdutividade dos Escritórios§!: [?ITA_offices_productivity_change|%+]\n"
  ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YMão de Obra Necessária nas Fábricas Civis§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMão de Obra Necessária nas Fábricas Militares§§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YMão de Obra Necessária nos Escritórios§§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMão de Obra Necessária nas Fábricas Militares§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YMão de Obra Necessária nos Escritórios§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
  ITA_modify_energy_gain_TT: "§YEnergia Gerada§!: [?ITA_energy_gain_change|+] GW\n"
  ITA_civil_war_partisan_activity: "Atividade Partidária"
  ITA_civil_war_partisan_activity_TT: "Como era de se esperar de um conflito tão divisivo, uma parcela significativa da população civil, embora não esteja diretamente lutando, fornece informações, suprimentos, abrigo e proteção aos soldados do lado pelo qual simpatiza."
  xylella_epidemic: "Epidemia de Xylella"
- xylella_epidemic_TT: "A Xylella fastidiosa é uma praga muito prejudicial, especialmente para as oliveiras. Isso aumentará nossas despesas adicionais semanais em §R0.05§ bilhões."
+ xylella_epidemic_TT: "A Xylella fastidiosa é uma praga muito prejudicial, especialmente para as oliveiras. \n\nIsso aumentará nossas despesas adicionais semanais em §R0.05§! bilhões."
  ITA_multipurpose_modifier: "Modificador Multipropósito"
  ITA_multipurpose_modifier_TT: "Este modificador dinâmico armazenará todos os efeitos de várias focos e decisões diferentes para evitar a desordem extra na janela do espírito nacional."
  roma_capitale_modifier: "Roma Capital"
@@ -2202,7 +2202,6 @@
  ITA_draw_closer_to_far_east_TT: "Nossa influência no Extremo Oriente cresce.\n §YTodos os países mencionados aumentam a influência, China em maior grau§!\n"
  ITA_reform_approval_TT: "Apesar de ser um grande país ocidental com fortes laços culturais com os EUA e a Europa, a cultura política e econômica italiana se assemelha muito mais à de um país sul-americano como a Argentina, com visões peronistas e neo-keynesianas dominantes em todos os partidos, mesmo aqueles que se proclamam liberais. Devido a isso, qualquer tentativa de liberalização será difícil de ser aceita pela população, a menos que haja uma mudança significativa na cultura dominante."
  ITA_unlock_policy_decision_TT: "Esse foco desbloqueará uma decisão para promulgar a política relacionada."
- ITA_modify_reform_expectance_effect_TT: "§YExpectativa de Reforma§!: [?drift_switch_change|3+]\n"
  ITA_ruling_party_popularity_change_decision_TT: "A mudança na popularidade do partido causada por esta decisão depende do partido governante atual."
  ITA_tax_evasion_TT: "Diminuir §YReceita Fiscal§! em §R10%§!\n"
  ITA_building_abuse_TT: "Diminui §YReceita de Impostos§! em §R5%§!\n"
@@ -2528,3 +2527,4 @@
  ITA_modify_article_18_decision: "Modificar o Artigo 18"
  ITA_modify_article_18_decision_desc: "O artigo 18.º do Estatuto dos Trabalhadores torna extremamente difícil para os empregadores despedir os seus empregados e o nosso mercado de trabalho tem sofrido em conformidade. Modificá-la irá certamente desencadear acusações de “trabalho forçado” e “escravatura” por parte da oposição, mas na realidade é apenas bom senso."
  ITA_modify_article_18_decision_repeal: "Reverter modificações do Artigo 18"
+ ITA_modify_reform_expectancy_effect_TT: "§YExpectativa de reforma§!: [?drift_switch_change|3+]\n"
