--- a/localisation/braz_por/MD_techs_l_braz_por.yml
+++ b/localisation/braz_por/MD_techs_l_braz_por.yml
@@ -825,7 +825,7 @@
  ambush_operations: "Operações de Emboscada"
  ambush_operations_desc: "Atacar de locais ocultos e posições entrincheiradas nos permitirá surpreender o inimigo."
  peaceful_civilian_coersion: "Coerção Civil Pacífica"
- peaceful_civilian_coersion_desc: "Trabalhando com a população civil e ganhando seu apoio, estaremos melhor abastecidos e equipados para nossos futuros confrontos."
+ peaceful_civilian_coersion_desc: "Ao trabalhar com a população civil e ao obter o seu apoio, estaremos mais bem abastecidos e equipados para os nossos compromissos futuros."
  violent_civilian_coersion: "Coerção Civil Violenta"
  violent_civilian_coersion_desc: "Espancamentos, sequestros e mais; ações violentas rapidamente nos garantirão o apoio necessário para continuar lutando contra os invasores."
  hit_and_run_raids: "Ataques de Bate e Foge"
@@ -1172,8 +1172,6 @@
  all_terrain_vehicles_desc: "Garantindo que pneus, suspensão e sistemas de tração funcionem em todos os tipos de terreno, podemos permitir que nossas unidades montadas lutem em qualquer campo de batalha."
  uparmor_packages: "Pacotes de Blindagem Adicional"
  uparmor_packages_desc: "Para melhor proteção no campo de batalha, nossas unidades montadas terão atualizações de blindagem implantadas para melhor proteger as tropas e seu equipamento."
- high_efficency_engines: "Motores de Alta Eficiência"
- high_efficency_engines_desc: "Usando avanços tecnológicos, nossos veículos utilitários terão desempenho de motor aprimorado, diminuindo seu consumo de combustível e aumentando sua independência das linhas de suprimento."
  mine_resistant_vehicles: "Veículos Resistentes a Minas"
  mine_resistant_vehicles_desc: "Construindo veículos projetados para proteger contra minas e IEDs, podemos garantir que nossas tropas estejam seguras, independentemente do campo de batalha em que possam lutar."
  rapid_manuver_force: "Força de Manobra Rápida"
@@ -3608,9 +3606,9 @@
  USA_KILLSAT4: "FASTRAC"
  USA_KILLSAT5: "ANGELS"
  USA_KILLSAT6: "Zuma"
- USA_RODS1: "Hastes do Deus"
- USA_RODS2: "Hastes de Tungstênio"
- USA_RODS3: "Hastes de Urânio"
+ USA_RODS1: "Rods from God"
+ USA_RODS2: "Tungsten Rods"
+ USA_RODS3: "Uranium Rods"
  SOV_ICBM1: "R-36 Scarp"
  SOV_ICBM2: "R-36M Satan"
  SOV_ICBM3: "R-36M2 Voevoda"
@@ -3687,7 +3685,7 @@
  SOV_OLV8: "Angara 1.2-PP"
  SOV_GNSS1: "GLONASS Block I"
  SOV_GNSS2: "GLONASS Block IIa"
- SOV_GNSS3: "GLONASS Block IIb"
+ SOV_GNSS3: "GLONASS Block IIv"
  SOV_GNSS4: "GLONASS-M"
  SOV_GNSS5: "GLONASS-K"
  SOV_GNSS6: "GLONASS-K2"
@@ -3715,9 +3713,9 @@
  SOV_KILLSAT4: "Olymp-K4"
  SOV_KILLSAT5: "Olymp-K5"
  SOV_KILLSAT6: "Olymp-K6"
- SOV_RODS1: "Hastes de Deus"
- SOV_RODS2: "Hastes de Tungstênio"
- SOV_RODS3: "Hastes de Urânio"
+ SOV_RODS1: "Rods from God"
+ SOV_RODS2: "Tungsten Rods"
+ SOV_RODS3: "Uranium Rods"
  CHI_ICBM1: "DF-4"
  CHI_ICBM2: "DF-5"
  CHI_ICBM3: "DF-5B"
@@ -3822,9 +3820,9 @@
  CHI_KILLSAT4: "NINXIA-1-3"
  CHI_KILLSAT5: "NINXIA-1-4"
  CHI_KILLSAT6: "NINXIA-1-5"
- CHI_RODS1: "Hastes de Deus"
- CHI_RODS2: "Hastes de Tungstênio"
- CHI_RODS3: "Hastes de Urânio"
+ CHI_RODS1: "Rods from God"
+ CHI_RODS2: "Tunsten Rods"
+ CHI_RODS3: "Uranium Rods"
  ENG_ICBM1: "Black Knight"
  ENG_ICBM2: "White Queen"
  ENG_ICBM3: "Red Rose"
@@ -3930,8 +3928,8 @@
  ENG_KILLSAT5: "Zircon Mk5"
  ENG_KILLSAT6: "Zircon Mk6"
  ENG_RODS1: "Excalibur"
- ENG_RODS2: "Varinha de Merlim"
- ENG_RODS3: "Ira de Morgan"
+ ENG_RODS2: "Merlins Rod"
+ ENG_RODS3: "Morgans Wrath"
  FRA_ICBM1: "T1"
  FRA_ICBM2: "T2"
  FRA_ICBM3: "T3"
@@ -4143,9 +4141,9 @@
  ISR_KILLSAT4: "ULTRASAT-Arba"
  ISR_KILLSAT5: "ULTRASAT-Hamesh"
  ISR_KILLSAT6: "ULTRASATShesh"
- ISR_RODS1: "Hastes de Elohim"
- ISR_RODS2: "Hastes de Tungstênio"
- ISR_RODS3: "Hastes de Urânio"
+ ISR_RODS1: "Rods from Elohim"
+ ISR_RODS2: "Tungsten Rods"
+ ISR_RODS3: "Uranium Rods"
  RAJ_ICBM1: "Agni-5"
  RAJ_ICBM2: "Agni-5A"
  RAJ_ICBM3: "Agni-6"
@@ -4250,9 +4248,9 @@
  RAJ_KILLSAT4: "Astrosat MK-3"
  RAJ_KILLSAT5: "Astrosat MK-4"
  RAJ_KILLSAT6: "Astrosat MK-5"
- RAJ_RODS1: "Hastes de Buddha"
- RAJ_RODS2: "Hastes de Tungstênio"
- RAJ_RODS3: "Hastes de Urânio"
+ RAJ_RODS1: "Rods from Buddha"
+ RAJ_RODS2: "Tungsten Rods"
+ RAJ_RODS3: "Uranium Rods"
  PAK_ICBM1: "Ghauri-5"
  PAK_ICBM2: "Ababeel-2"
  PAK_ICBM3: "Ababeel-3"
@@ -4357,9 +4355,9 @@
  PAK_KILLSAT4: "PASS-3"
  PAK_KILLSAT5: "PASS-3-1"
  PAK_KILLSAT6: "PASS-3-Z"
- PAK_RODS1: "Hastes de Allah"
- PAK_RODS2: "Hastes de Tungstênio"
- PAK_RODS3: "Hastes de Urânio"
+ PAK_RODS1: "Rods from Allah"
+ PAK_RODS2: "Tungsten Rods"
+ PAK_RODS3: "Uranium Rods"
  NKO_ICBM1: "Hwasong 5 - Scud-B"
  NKO_ICBM2: "Hwasong 5b - Advanced"
  NKO_ICBM3: "Hwasong 6 - Scud-C"
@@ -4464,9 +4462,9 @@
  NKO_KILLSAT4: "KILLSAT 2015"
  NKO_KILLSAT5: "KILLSAT 2025"
  NKO_KILLSAT6: "KILLSAT 2035"
- NKO_RODS1: "Hastes do Grande Líder"
- NKO_RODS2: "Hastes do Líder Eterno"
- NKO_RODS3: "Hastes do Líder Supremo"
+ NKO_RODS1: "Rods from Great Leader"
+ NKO_RODS2: "Rods from Eternal Leader"
+ NKO_RODS3: "Rods from Supreme Leader"
  PER_ICBM1: "Shahab-5"
  PER_ICBM2: "Shahab-6"
  PER_ICBM3: "Shahab-7"
@@ -4571,9 +4569,9 @@
  PER_KILLSAT4: "Fareste-4"
  PER_KILLSAT5: "Fareste-5B"
  PER_KILLSAT6: "Fareste-6D"
- PER_RODS1: "Hastes de Allah"
- PER_RODS2: "Hastes de Tungstênio"
- PER_RODS3: "Hastes de Urânio"
+ PER_RODS1: "Rods from Allah"
+ PER_RODS2: "Tungsten Rods"
+ PER_RODS3: "Uranium Rods"
  SWE_ICBM1: "CGM-16 Atlas"
  SWE_ICBM2: "HGM-25A Titan I"
  SWE_ICBM3: "LGM-25C Titan II"
@@ -4678,9 +4676,9 @@
  SWE_KILLSAT4: "FASTRAC"
  SWE_KILLSAT5: "ANGELS"
  SWE_KILLSAT6: "Zuma"
- SWE_RODS1: "Hastes de Deus"
- SWE_RODS2: "Hastes de Tungstênio"
- SWE_RODS3: "Hastes de Urânio"
+ SWE_RODS1: "Rods from God"
+ SWE_RODS2: "Tungsten Rods"
+ SWE_RODS3: "Uranium Rods"
  GER_ICBM1: "CGM-16 Atlas"
  GER_ICBM2: "HGM-25A Titan I"
  GER_ICBM3: "LGM-25C Titan II"
@@ -4785,8 +4783,10 @@
  GER_KILLSAT4: "FASTRAC"
  GER_KILLSAT5: "ANGELS"
  GER_KILLSAT6: "Zuma"
- GER_RODS1: "Hastes de Deus"
- GER_RODS2: "Hastes de Tungstênio"
- GER_RODS3: "Hastes de Urânio"
+ GER_RODS1: "Rods from God"
+ GER_RODS2: "Tungsten Rods"
+ GER_RODS3: "Uranium Rods"
  CAT_western: "Doutrina de Combate Ocidental"
  CAT_eastern: "Doutrina de Combate Oriental"
+ high_efficiency_engines: "Motores de alta eficiência"
+ high_efficiency_engines_desc: "Utilizando os avanços da tecnologia, nossos veículos utilitários terão melhor desempenho do motor, diminuindo o consumo de combustível e aumentando a independência das linhas de abastecimento."
