--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1236,8 +1236,8 @@
  all_terrain_vehicles_desc: "By ensuring that tires, suspension, and drive systems work in all types of terrain, we can let our mounted units fight on any battlefield."
  uparmor_packages: "Up-Armor Packages"
  uparmor_packages_desc: "For better protection in the battlespace, our mounted units will have armor upgrades deployed, to better protect the troops and their equipment."
- high_efficency_engines: "High Efficency Engines"
- high_efficency_engines_desc: "Using advances in technology, our utility vehicles will have improved engine performance, decreasing their fuel consumption and increasing their independence from supply lines."
+ high_efficiency_engines: "High Efficiency Engines"
+ high_efficiency_engines_desc: "Using advances in technology, our utility vehicles will have improved engine performance, decreasing their fuel consumption and increasing their independence from supply lines."
  mine_resistant_vehicles: "Mine Resistant Vehicles"
  mine_resistant_vehicles_desc: "By building vehicles designed to protect against mine strikes and IEDs, we can ensure our troops are safe no matter what battlefield they may fight on."
  rapid_manuver_force: "Rapid Maneuver Force"
