--- a/localisation/french/MD_counter_ui_l_french.yml
+++ b/localisation/french/MD_counter_ui_l_french.yml
@@ -39,7 +39,7 @@
  TOPBAR_FIELD_STRENGTH_TITLE: "Intensité du champ"
  TOPBAR_PROTESTS_TITLE: "Force de la protestation"
  TOPBAR_FOREIGN_INFLUENCING_TITLE: "Influence étrangère"
- TOPBAR_EUROSCEPTICISM_TITLE: "Euroscepticisme"
+ TOPBAR_EUROSCEPTICISM_TITLE: "Union européenne"
  TOPBAR_LIST_CASUALTIES_TOOLTIP: "Pertes"
  TOPBAR_LIST_SURRENDER_TOOLTIP: "Progression de la reddition"
  TOPBAR_LIST_STRENGTH_RATIO_TOOLTIP: "Rapport de force terrestre"
