--- a/localisation/french/MD_focus_GEO_l_french.yml
+++ b/localisation/french/MD_focus_GEO_l_french.yml
@@ -907,43 +907,46 @@
  geo_misc.7.d: "Abkhazia will not sign a pact with us."
  geo_misc.7.a: "triste"
  geo_misc.8.t: "Georgia suggests we join ZSFSR"
- geo_misc.8.d: "Georgian communists want to build a communist transcaucasia under their leadership. They want us to integrate into their union as a puppet state. "
+ geo_misc.8.d: "Georgian communists want to build a communist Transcaucasia under their leadership. They want us to integrate into their union as a puppet state. "
  geo_misc.8.a: "Everything for the Red October!"
  geo_misc.8.b: "Fuck off!"
  GEO_armenian_proposal_com: "Proposal for Armenia"
  GEO_whyareyouhere: "Why are you here?"
  GEO_whyareyouhere_desc: "You literally scrolled the whole focus screen to just find this huh? Tag BoNDeX on the MD's discord server. May your nerdyness be known!"
- GEO_money_from_outside_desc: "The world trade organization is a great place to start growing our economy in."
+ GEO_money_from_outside_desc: "The World Trade Organization is a great place to start growing our economy."
  GEO_transit_tax_desc: "What will happen if we will take money from immigrants?"
  GEO_tax_reforms_desc: "We can make good tax reforms and get the money to grow our country."
  GEO_tax_amnisty_2004_desc: "We have a lot of tax evaders in our country, as a result we don't get enough money to finance our country. We should drop the charges against them so they feel safe paying taxes again and we can get a lot more money!"
- GEO_ask_west_for_help_desc: "We will get money from our europeans friends."
+ GEO_ask_west_for_help_desc: "We will get money from our European friends."
  GEO_kulev_terminal_desc: "We will spend money for building an oil terminal and will get more money back!"
  GEO_polminmeet_desc: "More friends won't hurt us."
  ARM_GEO_rebellion_category: "Djavakheti Question"
- ARM_GEO_rebellion_category_desc: "Samtskhe-Djavakheti Region of Georgia is largely populated by ethnic Armenians. Unlike Ossetians and Abkhazians, they did not rebel, but it may be so soon."
+ ARM_GEO_rebellion_category_desc: "The Samtskhe-Djavakheti region of Georgia is largely populated by ethnic Armenians. The Ossetians and Abkhazians rebelled, but the Armenians in Georgia did not. It is possible if we continue to negotiate and instigate the situation they'll also rebel."
  ARM_GEO_rebellion: "Armenian Uprising!"
  arm_didnt_spport: "Armenia didn't support Djavakhq rebellion!"
  ARM_rebellion_propaganda_lev: "Armenian propaganda campaign"
- ARM_start_talking_proces: "Start mutual peace talks"
- ARM_rebellion_propaganda: "Increase ethnic tensions in Djavakhq!"
+ ARM_rebellion_propaganda: "Instigate Ethnic Tensions"
  ARM_send_weapons: "Smuggle weapons to Djavakhq"
  GEO_expand_autonomy: "Promise Autonomy Expansion"
  GEO_raids_police: "Disarm the people"
  ARM_djavakhq: "Free Djavakhq"
- geo_misc.9.t: "Djavakhq compromise proposal!"
- geo_misc.9.d: "The other side proposes a new agreement on giving Djavakheti more political, cultural autonomy and maintaining good relations between countries!"
- geo_misc.9.a: "We are ready for talking process. Increasing Autonmy would solve the Issue."
+ geo_misc.9.t: "Djavakhq Compromise Proposal"
+ geo_misc.9.d: "[FROM.GetName] has proposed a peace proposal concerning the Djavakhq issue. The proposed solution is to allow the Armenians a degree of autonomy. They theorize that it will prevent the Armenians from feeling as if they are not represented in government and allow the Georgian government the ability to retain control over their territories. How do we respond? Are we willing to take a seat at the negotiating table?"
+ geo_misc.9.a: "Autonomy would solve the issue."
  geo_misc.9.b: "Are you joking? Djavakhq Should be free!"
  geo_misc.9.c: "We are ready to start the talks on increasing autonomy..."
  geo_misc.9.d1: "Samtskhe-Djavakheti is rightfully ours!"
  geo_misc.10.t: "Increasing Autonomy in Djavakheti."
- geo_misc.10.d: "Now, time has come to finally sign the resolution. Djavakheti will get a status of religious, cultural and linguistical autonomy."
+ geo_misc.10.d: "Now, the time has come to finally sign the resolution. Djavakheti will get a status of religious, cultural and linguistical autonomy. Are we going to take the next step?"
  geo_misc.10.a: "We agree to these terms."
  geo_misc.10.b: "We are ready to give special status."
  geo_misc.11.t: "Georgian SSR Proposal"
  geo_misc.11.d: "Georgian Socialists propose an agreement on unification of our countries. What should we do?"
- geo_misc.11.a: "Red masked capitalists will not enslave us!"
- geo_misc.11.b: "Maybe for the sake of red october..."
+ geo_misc.11.a: "Red-masked capitalists will not enslave us!"
+ geo_misc.11.b: "Maybe for the sake of red October..."
  GEO_peaceful_nats: "Peaceful Nationalists"
  GEO_peaceful_nats_desc: "Peaceful Nationalists"
+ ARM_GEO_drafting_peace_proposal: "Drafting a Peace Proposal for Djavakheti"
+ ARM_start_talking_process: "Start Mutual Peace Talks"
+ ARM_start_talking_process_desc: "It is time to start mutual peace talks with the Georgian government to discuss peace between the Armenians of Samtskhe-Djavakheti and themselves. "
+ ARM_rebellion_propaganda_desc: "Monopolizing on this will allow us to bring these Armenians back into our territory and eliminate the oppression of our people. We should show them we support them and instigate the tensions between the people of Djavakhq and the Georgian government."
