--- a/localisation/french/MD_focus_IND_l_french.yml
+++ b/localisation/french/MD_focus_IND_l_french.yml
@@ -572,7 +572,7 @@
  indonesia.7.a: "No, Riau is OURS!"
  indonesia.7.b: "Let them have it, we don't need that sad little island anyway"
  indonesia.70.t: "Malaysia Refuses to scede Riau!"
- indonesia.70.d: "The Malaysian diplomats have recently alerted us of their rejection of our proposal. This is a violation of Indonesian soverignty and must be met with an appropiate response!"
+ indonesia.70.d: "The Malaysian diplomats have recently alerted us of their rejection of our proposal. This is a violation of Indonesian sovereignty and must be met with an appropriate response!"
  indonesia.70.a: "They asked for it.."
  indonesia.700.t: "They Scede Riau!"
  indonesia.700.d: "It seems our message was loud and clear, Riau is ours! The Malaysian diplomats have recently told us that the state has relinquished all of its claims over the island of Riau. Indonesia may now take a deep breath of relief"
@@ -580,7 +580,7 @@
  indonesia.5865.t: "Disasters Incoming!"
  indonesia.5865.d: "In Indonesia, there will be lots and lots of disasters. To ensure the stability of Indonesia, make sure to check the \"Decisions\" tab and complete the given tasks under \"Indonesia's Terrible Luck\". Your first task will be building a dockyard in Kalimantan to prevent an industrial disaster, good luck!"
  indonesia.5865.a: "D'accord"
- indonesia.923.t: "Indonesias Future"
+ indonesia.923.t: "Indonesia's Future"
  indonesia.923.d: "Our nation has been in a state of disarray for a very long time, reaching as far back as when we first got independence from the Dutch. From financial issues, all the way to social and ethnic issues Indonesia has been hit from all sides and it cannot hold much longer. Decisive action must be taken to ensure Indonesia's survival and prosperity in the 21st century. So therefore we must first begin by tackling the issues close to home"
  indonesia.923.a: "Onward we go!"
  indonesia.69.t: "Violence in Kalimantan!"
@@ -596,7 +596,7 @@
  indonesia.50.a: "Perfect"
  indonesia.500.t: "Dutch Refuse Aid!"
  indonesia.500.d: "The Dutch diplomats have come to us to inform that their government has denied our Christians aid!"
- indonesia.500.a: "Unbelieveable"
+ indonesia.500.a: "Unbelievable"
  indonesia.6.t: "Indonesia Request's funds"
  indonesia.6.d: "Indonesia has been having a really heated religious conflict back at home, and they are looking to us for some financial aid"
  indonesia.6.a: "Sure, if it's for the greater good"
@@ -606,7 +606,7 @@
  indonesia.60.a: "Perfect"
  indonesia.600.t: "Saudi's Refuse Aid!"
  indonesia.600.d: "The Saudi diplomats have come to us to inform that their government has denied our Muslims aid!"
- indonesia.600.a: "Unbelieveable"
+ indonesia.600.a: "Unbelievable"
  indonesia.772.t: "Radical Leader Rizieq Shihab Arrested!"
  indonesia.772.d: "Radical Leader of the organization \"FPI\", Rizieq Shihab, has been arrested and is now awaiting trial. This is a major win for Indonesian security, as our democracy is no longer in direct threat of radicals and their backward ideals!"
  indonesia.772.a: "A Win for Democracy"
@@ -618,11 +618,11 @@
  indonesia.3.d: "After our approval for East-Timors independence, the United Nation's has approved their nations constitution. A democratic, independent East-Timor will shortly be our neighbor.. "
  indonesia.3.a: "It is what they wanted"
  indonesia.4.t: "Timor Leste is free!"
- indonesia.4.d: "It is official. The U.N's approval of their constitution has finally been inacted, and an independent Timor Leste is now our neighbor."
+ indonesia.4.d: "It is official. The U.N's approval of their constitution has finally been enacted, and an independent Timor Leste is now our neighbor."
  indonesia.4.a: "Let us hope for good relations"
  indonesia.9.t: "Indonesia denies East-Timor independence!"
  indonesia.9.d: "The Indonesian regime has denied the people of East Timor their freedom and independence. Many rebel groups have been looking towards us as potential liberators and at the moment much tension is being brewed in the region and the world..."
- indonesia.9.a: "Alright, thats enough!"
+ indonesia.9.a: "Alright, that's enough!"
  indonesia.9.b: "Not our problem"
  indonesia.55.t: "Our Students Future!"
  indonesia.55.d: "The time has come for us to discuss the future of our childrens education. For as long as we have known, the ministry of religious affairs has ran the school system and has imposed a moderate amount of islamic teachings to our students. We must re-evaluate whether this approach is truly effective or not..."
@@ -631,9 +631,9 @@
  indonesia.77.t: "Rampant Ethnic Tension!"
  indonesia.77.d: "It is time to settle the ethnic conflicts raging within our nation. Many places such as Ambon, and Borneo experience violence almost daily. The nation cannot go on if its people are fighting each other over religious beliefs. We must now set our foot down, and pick who we want to support, if anyone."
  indonesia.77.a: "The Muslims need us!"
- indonesia.77.b: "We dont pick favorites, just fix it already!"
+ indonesia.77.b: "We don't pick favorites, just fix it already!"
  indonesia.77.c: "The Christians need us!"
- indonesia.1000.t: "Parliement Stormed"
+ indonesia.1000.t: "Parliament Stormed"
  indonesia.1000.d: "Months of rioting and clashes have finally lead us to this point.. Our supporters and followers succesfully stormed the Indonesian Parliement and demanded several key figures step down, and all complied. The Indonesian people are now free from the eternal tyranny that was this so called democracy"
  indonesia.1000.a: "The Revolution succeeds"
  indonesia.1001.t: "Ambon City under Christian control!"
@@ -950,3 +950,4 @@
  IND_est2: "May lead to §RWar§! with Timor-Leste\nand §RWorse§! relations with the West!"
  indonesian_caliphate: "Indonesian Caliphate Expands!"
  indonesia_confront_australia_threat: "Indonesia threatens Australia over Timor-Leste!"
+ IND_our_policies_tt: "We must complete either §Y$IND_new_capital$§! or §Y$IND_new_silkroad$§!"
