--- a/localisation/french/MD_focus_ITA_l_french.yml
+++ b/localisation/french/MD_focus_ITA_l_french.yml
@@ -2515,16 +2515,16 @@
  ITA_modify_agricolture_productivity_modifier_effect_TT: "§YProductivité de l'agriculture§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
  ITA_modify_civilian_factories_productivity_effect_TT: "§YProductivité des usines civiles§!: [?ITA_civilian_factories_productivity_change|%+]\n"
  ITA_modify_military_factories_productivity_effect_TT: "§YProductivité des usines militaires§!: [?ITA_military_factories_productivity_change|%+]\n"
- ITA_modify_dockyard_productivity_effect_TT: "§YProductivité des chantiers navals§§!: [?ITA_dockyard_productivity_change|%+]\n"
- ITA_modify_offices_productivity_effect_TT: "§YProductivité des bureaux§§!: [?ITA_offices_productivity_change|%+]\n"
+ ITA_modify_dockyard_productivity_effect_TT: "§YProductivité des chantiers navals§!: [?ITA_dockyard_productivity_change|%+]\n"
+ ITA_modify_offices_productivity_effect_TT: "§YProductivité des bureaux§!: [?ITA_offices_productivity_change|%+]\n"
  ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YMain-d'œuvre civile des usines requise§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMain-d'œuvre des usines militaires requise§§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YEffectifs de bureaux requis§§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMain-d'œuvre des usines militaires requise§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YEffectifs de bureaux requis§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
  ITA_modify_energy_gain_TT: "§YPuissance générée§!: [?ITA_energy_gain_change|+] GW\n"
- ITA_modify_reform_expectance_effect_TT: "§YAttente de réforme§!: [?drift_switch_change|3+]\n"
  ITA_treaty_of_benghazi_TT: "Le §YTraité de Benghazi§! a été signé avec [LBA.GetNameWithFlag]"
  ITA_modify_article_18: "Modifier l'article 18"
  ITA_modify_article_18_desc: "L’article 18 du Statut des travailleurs rend extrêmement difficile pour les employeurs de licencier leurs employés et notre marché du travail en a souffert en conséquence. Le modifier susciterait sûrement des accusations de « travail forcé » et d’« esclavage » de la part de l’opposition, mais en réalité, ce n’est que du bon sens."
  ITA_modify_article_18_decision: "Modifier l'article 18"
  ITA_modify_article_18_decision_desc: "L’article 18 du Statut des travailleurs rend extrêmement difficile pour les employeurs de licencier leurs employés et notre marché du travail en a souffert en conséquence. Le modifier susciterait sûrement des accusations de « travail forcé » et d’« esclavage » de la part de l’opposition, mais en réalité, ce n’est que du bon sens."
  ITA_modify_article_18_decision_repeal: "Annuler les modifications de l’article 18"
+ ITA_modify_reform_expectancy_effect_TT: "§YEspérance de réforme§!: [?drift_switch_change|3+]\n"
