--- a/localisation/polish/MD_counter_ui_l_polish.yml
+++ b/localisation/polish/MD_counter_ui_l_polish.yml
@@ -39,7 +39,7 @@
  TOPBAR_FIELD_STRENGTH_TITLE: "Siła pola"
  TOPBAR_PROTESTS_TITLE: "Siła protestu"
  TOPBAR_FOREIGN_INFLUENCING_TITLE: "Wpływy zagraniczne"
- TOPBAR_EUROSCEPTICISM_TITLE: "Eurosceptycyzm"
+ TOPBAR_EUROSCEPTICISM_TITLE: "Unia Europejska"
  TOPBAR_LIST_CASUALTIES_TOOLTIP: "Ofiary wypadku"
  TOPBAR_LIST_SURRENDER_TOOLTIP: "Poddaj się postępowi"
  TOPBAR_LIST_STRENGTH_RATIO_TOOLTIP: "Współczynnik siły"
