--- a/localisation/polish/MD_focus_GEO_l_polish.yml
+++ b/localisation/polish/MD_focus_GEO_l_polish.yml
@@ -921,24 +921,23 @@
  GEO_kulev_terminal_desc: "Wydamy pieniądze na budowę terminalu naftowego i jeszcze więcej otrzymamy z powrotem!"
  GEO_polminmeet_desc: "Więcej przyjaciół nie zrobi nam krzywdy."
  ARM_GEO_rebellion_category: "Pytanie Dżawachetii"
- ARM_GEO_rebellion_category_desc: "Region Samcche-Djavakheti w Gruzji jest w dużej mierze zamieszkany przez etnicznych Ormian. W przeciwieństwie do Osetyjczyków i Abchazów nie zbuntowali się, ale może to nastąpić już wkrótce."
+ ARM_GEO_rebellion_category_desc: "Region Samcche-Dżawachetia w Gruzji jest w dużej mierze zamieszkany przez etnicznych Ormian. Zbuntowali się Osetyjczycy i Abchazi, ale Ormianie w Gruzji nie. Możliwe, że jeśli będziemy kontynuować negocjacje i podżegać do sytuacji, oni również się zbuntują."
  ARM_GEO_rebellion: "Powstanie Ormiańskie!"
  arm_didnt_spport: "Armenia nie poparła buntu Dżawachka!"
  ARM_rebellion_propaganda_lev: "Ormiańska kampania propagandowa"
- ARM_start_talking_proces: "Rozpocznij wzajemne rozmowy pokojowe"
- ARM_rebellion_propaganda: "Zwiększ napięcia etniczne w Dżawachku!"
+ ARM_rebellion_propaganda: "Wzniecać napięcia etniczne"
  ARM_send_weapons: "Przemyć broń do Dżawakhqa"
  GEO_expand_autonomy: "Obiecaj rozszerzenie autonomii"
  GEO_raids_police: "Rozbroić ludzi"
  ARM_djavakhq: "Uwolnij Dżawakhka"
- geo_misc.9.t: "Kompromisowa propozycja Djavakhqa!"
- geo_misc.9.d: "Druga strona proponuje nowe porozumienie w sprawie zapewnienia Dżawachetii większej autonomii politycznej i kulturalnej oraz utrzymania dobrych stosunków między krajami!"
- geo_misc.9.a: "Jesteśmy gotowi do rozmów. Zwiększenie autonomii rozwiązałoby problem."
+ geo_misc.9.t: "Propozycja kompromisu Djavakhqa"
+ geo_misc.9.d: "[FROM.GetName] zaproponował propozycję pokojową dotyczącą kwestii Djavakhq. Proponowane rozwiązanie ma zapewnić Ormianom pewną autonomię. Twierdzą, że dzięki temu Ormianie nie będą mieli poczucia, że ​​nie są reprezentowani w rządzie, a rządowi Gruzji uda się zachować kontrolę nad ich terytoriami. Jak reagujemy? Czy jesteśmy gotowi usiąść przy stole negocjacyjnym?"
+ geo_misc.9.a: "Autonomia rozwiązałaby problem."
  geo_misc.9.b: "Żartujesz? Djavakhq powinien być wolny!"
  geo_misc.9.c: "Jesteśmy gotowi rozpocząć rozmowy o zwiększeniu autonomii..."
  geo_misc.9.d1: "Samcche-Djavakheti jest słusznie nasze!"
  geo_misc.10.t: "Zwiększenie autonomii w Dżawachetii."
- geo_misc.10.d: "Teraz przyszedł czas na ostateczne podpisanie uchwały. Dżawachetia uzyska status autonomii religijnej, kulturalnej i językowej."
+ geo_misc.10.d: "Teraz przyszedł czas na ostateczne podpisanie uchwały. Dżawachetia uzyska status autonomii religijnej, kulturalnej i językowej. Czy podejmiemy kolejny krok?"
  geo_misc.10.a: "Zgadzamy się na te warunki."
  geo_misc.10.b: "Jesteśmy gotowi nadać specjalny status."
  geo_misc.11.t: "Propozycja Gruzińskiej SRR"
@@ -947,3 +946,7 @@
  geo_misc.11.b: "Może ze względu na czerwony październik..."
  GEO_peaceful_nats: "Pokojowi nacjonaliści"
  GEO_peaceful_nats_desc: "Pokojowi nacjonaliści"
+ ARM_GEO_drafting_peace_proposal: "Sporządzenie propozycji pokojowej dla Dżawachetii"
+ ARM_start_talking_process: "Rozpocznij wzajemne rozmowy pokojowe"
+ ARM_start_talking_process_desc: "Czas rozpocząć wzajemne rozmowy pokojowe z rządem gruzińskim, aby omówić pokój między Ormianami z Samcche-Dżawachetii a nimi samymi."
+ ARM_rebellion_propaganda_desc: "Monopolizacja na tym pozwoli nam sprowadzić Ormian z powrotem na nasze terytorium i wyeliminować ucisk naszego narodu. Powinniśmy pokazać im, że ich wspieramy i wzniecać napięcia między mieszkańcami Dżawachku a rządem gruzińskim."
