--- a/localisation/polish/MD_focus_IND_l_polish.yml
+++ b/localisation/polish/MD_focus_IND_l_polish.yml
@@ -596,7 +596,7 @@
  indonesia.50.a: "Doskonały"
  indonesia.500.t: "Holendrzy odmówią pomocy!"
  indonesia.500.d: "Holenderscy dyplomaci przyszli do nas z informacją, że ich rząd odmówił naszym chrześcijanom pomocy!"
- indonesia.500.a: "Niewiarygodne"
+ indonesia.500.a: "Nie do wiary"
  indonesia.6.t: "Indonezja Wniosek o fundusze"
  indonesia.6.d: "Indonezja toczy u siebie naprawdę ostry konflikt religijny i zwraca się do nas o pomoc finansową"
  indonesia.6.a: "Jasne, jeśli ma to na celu większe dobro"
@@ -606,7 +606,7 @@
  indonesia.60.a: "Doskonały"
  indonesia.600.t: "Arabia Saudyjska odmawia pomocy!"
  indonesia.600.d: "Saudyjscy dyplomaci przyszli do nas, aby poinformować, że ich rząd odmówił naszym muzułmanom pomocy!"
- indonesia.600.a: "Niewiarygodne"
+ indonesia.600.a: "Nie do wiary"
  indonesia.772.t: "Radykalny przywódca Rizieq Shihab aresztowany!"
  indonesia.772.d: "Radykalny przywódca organizacji „FPI”, Rizieq Shihab, został aresztowany i obecnie oczekuje na proces. Jest to wielka wygrana dla indonezyjskiego bezpieczeństwa, ponieważ naszej demokracji nie zagraża już bezpośrednio radykał i jego zacofane ideały!"
  indonesia.772.a: "Zwycięstwo Demokracji"
@@ -618,7 +618,7 @@
  indonesia.3.d: "Po naszej akceptacji niepodległości Timoru Wschodniego, Organizacja Narodów Zjednoczonych zatwierdziła konstytucję tego państwa. Demokratyczny, niezależny Timor Wschodni wkrótce będzie naszym sąsiadem."
  indonesia.3.a: "To jest to, czego chcieli"
  indonesia.4.t: "Timor Wschodni jest bezpłatny!"
- indonesia.4.d: "To jest oficjalne. Zatwierdzenie przez ONZ ich konstytucji w końcu zostało anulowane i niezależny Timor Wschodni jest teraz naszym sąsiadem."
+ indonesia.4.d: "To jest oficjalne. Nareszcie doszło do zatwierdzenia przez ONZ konstytucji i niezależny Timor Wschodni jest teraz naszym sąsiadem."
  indonesia.4.a: "Miejmy nadzieję na dobre relacje"
  indonesia.9.t: "Indonezja zaprzecza niepodległości Timoru Wschodniego!"
  indonesia.9.d: "Reżim indonezyjski odmówił obywatelom Timoru Wschodniego wolności i niepodległości. Wiele grup rebeliantów postrzega nas jako potencjalnych wyzwolicieli, a obecnie w regionie i na świecie narasta duże napięcie…"
@@ -950,3 +950,4 @@
  IND_est2: "Może prowadzić do §RWar§! z Timorem Wschodnim\n i §RWgorszym§! stosunki z Zachodem!"
  indonesian_caliphate: "Indonezyjski kalifat się rozwija!"
  indonesia_confront_australia_threat: "Indonezja grozi Australii w sprawie Timoru Wschodniego!"
+ IND_our_policies_tt: "Musimy ukończyć §Y$IND_new_capital$§! lub §Y$IND_new_silkroad$§!"
