--- a/localisation/polish/MD_focus_LBA_l_polish.yml
+++ b/localisation/polish/MD_focus_LBA_l_polish.yml
@@ -6,7 +6,7 @@
  libya_sell_oil_fields: "Sprzedaj krajowe pola naftowe"
  libya_sell_oil_fields_desc: "Możemy sprzedać część pól naftowych zarządzanych przez National Oil Corporation zagranicznym firmom. Możemy szybko zarobić, ale to sprawi, że nasz sektor energetyczny będzie bardziej zależny od innych krajów"
  libya_develop_oil_field_cost_bad_tt: "Podstawowy koszt rozwoju pola naftowego w el-Saharze wynosi §Y$3 miliardy§! . Kwota ta wzrasta z [?lba_oil_nationalisation|%0R]powodu naszego §Ypoziomu nacjonalizacji§!"
- libya_develop_oil_field_cost_tt: "Podstawowy koszt rozwoju pola naftowego w Waha wynosi §Y6 miliardów dolarów§! . Kwota ta wzrasta ze [?lba_oil_nationalisation|%0R] względu na §Ypoziom nacjonalizacji§!"
+ libya_develop_oil_field_cost_tt: "Podstawowy koszt rozwoju pola naftowego w Waha wynosi §Y8 miliardów dolarów§! . Kwota ta wzrasta ze [?lba_oil_nationalisation|%0R] względu na §Ypoziom nacjonalizacji§!"
  libya_develop_el_sahara_fields: "Rozwijanie pól naftowych El-Sharara"
  libya_develop_el_sahara_fields_desc: "Pola naftowe el-Sharara znajdują się w dystrykcie Wadi al Hayaa w Południowej Libii. Jest to niewielkie pole naftowe w skali Libii, ale nadal ważne. Rafinowana tutaj ropa jest przetwarzana i przechowywana w §YMellitah i az-Zawiyah w pobliżu Trypolisu§!. Dzięki zwiększonemu wysiłkowi możemy zwiększyć produkcję w el-Saharze.\n\nAby rozszerzyć zakres dostępnych złóż ropy naftowej, musimy przygotować obiekty do jej przechowywania i znaleźć wydajne metody jej wydobywania."
  libya_develop_west_waha_fields: "Rozwijanie zachodnich pól naftowych Waha"
@@ -255,7 +255,7 @@
  libya_anti_colonial_start_revolution_tt_1: "§R[FROM.GetNameWithFlag] może wypowiedzieć nam wojnę z wyprzedzeniem!§!\n"
  libya_anti_colonial_start_revolution_tt_2: "§GStrona buntownicza dołączy do naszej frakcji!§!"
  libya_oil_nationalisation_dynamic_modifier: "Nacjonalizacja ropy"
- TT_libya_oil_nationalisation_dynamic_modifier: "Poziom nacjonalizacji: §Y[?lba_oil_nationalisation|%0]§!"
+ TT_libya_oil_nationalisation_dynamic_modifier: "Poziom nacjonalizacji: §Y[?lba_oil_nationalisation|%0]§!\nDodatkowy dochód: $$[?oil_nationalisation_income|+3] miliardy na §YWydobyty olej§!\n"
  libya_oil_nationalisation_dynamic_modifier_desc: "Większość wydobycia ropy w Libii jest kontrolowana przez National Oil Corporation. Inwestycje zagraniczne firm zagranicznych, choć korzystne dla państwa, są ograniczone. Wyższy poziom nacjonalizacji zaszkodzi naszemu wzrostowi produktywności i sprawi, że zagospodarowanie nowych pól naftowych będzie droższe."
  libya_gaddafi_instability_dynamic_modifier: "Niestabilność rodziny"
  libya_gaddafi_instability_dynamic_modifier_desc: "Ekscentryzm Kaddafiego i jego upór w faworyzowaniu swoich dzieci w polityce powodują coraz większy opór ze strony ludności libijskiej"
