--- a/localisation/polish/MD_international_l_polish.yml
+++ b/localisation/polish/MD_international_l_polish.yml
@@ -253,11 +253,11 @@
  expand_operations_desc: "Zwiększy to ogólne możliwości naszego PMC."
  expand_quality: "Rozszerz bazę materiałów"
  expand_quality_desc: "Zwiększy to naszą możliwą listę jednostek."
- ban_from_operating: "Ban PMC from operating"
+ ban_from_operating: "Zakazać działania PMC"
  ban_from_operating_desc: "Uniemożliwi to innym krajom dostęp do naszego PMC"
- lift_ban_from_operating: "Lift ban from operation"
+ lift_ban_from_operating: "Zakaz użytkowania windy"
  lift_ban_from_operating_desc: "Umożliwi to innym krajom zatrudnienie naszego PMC"
- call_pmc_back_sov: "Call back units"
+ call_pmc_back_sov: "Odwołaj jednostki"
  call_pmc_back_sov_desc: "Umożliwi nam to powrót chłopców do domu, jednakże za rozwiązanie umowy z każdym krajem będziemy musieli zapłacić odszkodowanie."
  pmc_category: "Prywatne Firmy Wojskowe"
  pmc_category_tracker_desc: "§YPrivate Military Companies§!.\n\n§GRent§! your own §Yprivate army!§!\n§YCompanies§! §Gloyal§! to us, or ones we control directly will give us §Y20%§! §Gdiscount§! on their services.\n\n[PMC_max_available]\n§YCurrent list of PMC's§!:\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
@@ -309,7 +309,7 @@
  close_constellis: "Close §YConstellis§! Units"
  open_md: "Open §YMD§! Units"
  close_md: "Close §YMD§! Units"
- pmc_header_local: "Hired - [?ROOT.merc_deployed] Available - [?ROOT.merc_capacity] Upgrade - [?ROOT.merc_upgrade]"
+ pmc_header_local: "Wynajęty - [?ROOT.merc_deployed] Dostępny - [?ROOT.merc_capacity] Ulepszenie -[?ROOT.merc_upgrade]"
  pmc_header_local_none: "Organizacja nie została jeszcze utworzona."
  pmc_header_global: "Wynajęty - [?global.merc_deployed^ROOT.pmc_index] Dostępny - [?global.merc_capacity^ROOT.pmc_index] Ulepszenie - [?global.merc_upgrade^ROOT.pmc_index]"
  pmc_header_global_none: "Organizacja nie została jeszcze utworzona."
@@ -491,7 +491,7 @@
  ct_region_africa_button_text: "Afryki Subsaharyjskiej"
  ct_region_me_button_text: "Bliski Wschód"
  MOR_promote_tolerant_islam: "§YPromote§! al-Wasatiyyah"
- MOR_promote_tolerant_islam_desc: "Morocco is well-known for its moderate interpretations of Islam. The Moroccan principle of al-Wasatiyyah, or moderation, combines the Maliki school of Islamic jurisprudence, Ashari theology and Sunni Sufism. The Kingdom has always maintained that the most effective way to prevent terrorism is to spread this form of moderate Islam to counteract extremist interpretations.\n\nWe can ensure more nations receive our teachings by having §YInfluence§! in other nations."
+ MOR_promote_tolerant_islam_desc: "Maroko jest dobrze znane ze swoich umiarkowanych interpretacji islamu. Marokańska zasada al-Wasatiyyah, czyli umiaru, łączy szkołę islamskiego prawoznawstwa Maliki, teologię Ashari i sunnicki sufizm. Królestwo zawsze utrzymywało, że najskuteczniejszym sposobem zapobiegania terroryzmowi jest szerzenie tej formy umiarkowanego islamu w celu przeciwdziałania ekstremistycznym interpretacjom.\n\nDzięki §YWpływowi§!możemy zapewnić, że więcej narodów otrzyma nasze nauki w innych narodach."
  OMA_promote_tolerant_islam: "§YPromote§! Ibadi Islam"
  OMA_promote_tolerant_islam_desc: "Społeczeństwo Omanu jest w dużej mierze odporne na ekstremistyczne ideologie islamskie. Wynika to w dużej mierze z rozpowszechnienia islamu Ibadi, który promuje tolerancję dla innych religii. Ibadyci preferują pokojowe rozwiązywanie sporów zamiast konfrontacji i jako tacy nie są podatni na radykalizację. Oman zawsze utrzymywał, że najskuteczniejszym sposobem zapobiegania terroryzmowi jest szerzenie islamu Ibadi w celu przeciwdziałania ekstremistycznym ideologiom.\n\nMożemy zapewnić, że więcej krajów otrzyma nasze nauki poprzez wywieranie §Ywpływu§! w innych krajach."
  MENA_terror_fund_deradicalisation_programmes: "§YFinansuj§! Programy deradykalizacji"
@@ -503,6 +503,6 @@
  MENA_terror_conduct_raid: "§YNajedź§! Kryjówki Terrorystów"
  MENA_terror_conduct_raid_desc: "Nasze służby bezpieczeństwa zidentyfikowały kryjówki terrorystów na naszym terytorium. Powinniśmy przeprowadzić naloty sił specjalnych w celu aresztowania podejrzanych o dżihad i przejęcia nielegalnej broni. Prawdopodobieństwo powodzenia tych nalotów zależy od ilości szkoleń antyterrorystycznych, które przeszedł nasz personel bezpieczeństwa."
  terror_conduct_raid_tt: "If the raid is §Gsuccessful§!, §YTerror Threat§! will decrease by §G-5§! (Current Threat: [?threat_level|Y0]) and §YRadicalization§! will increase by §R+2§! (Current Radicalization: [?radicalization|Y0]).\nIf the raid is §Runsuccessful§!, §YTerror Threat§! will not change and §YRadicalization§! will increase by §R+5§! (Current Radicalization: [?radicalization|Y0]).\n§GHas a higher likelihood of success than airstrikes.§!\n\nThe raid has a base success rate of §Y40%§!\nEach level of §YCounter Terror Training§! increases the likelihood of success by §G+5.00%§!\n(Current §YCounter Terror Training§! Level: [?ct_training|Y2])\n\n\n"
- MENA_terror_conduct_strike: "§YLaunch§! Airstrikes on Terrorist Hideouts"
+ MENA_terror_conduct_strike: "§YLaunch§! Ataki powietrzne na kryjówki terrorystów"
  MENA_terror_conduct_strike_desc: "W odległych rejonach kraju znajduje się wiele kryjówek dżihadystów, gdzie władza rządu centralnego jest ograniczona. Powinniśmy obrać za cel te kryjówki ataki powietrzne, aby wyeliminować zagrożenie, jakie stwarzają ci dżihadyści. Prawdopodobieństwo powodzenia tych ataków zależy od ilości szkoleń antyterrorystycznych, które przeszli nasi pracownicy ochrony."
  terror_conduct_strike_tt: "\nJeżeli atak lotniczy zakończy się §Gsuccessful§!, §YZgrożenie Terrorystyczne§! zmniejszy się o §G-5§! (Obecne Zagrożenie: [?threat_level|Y0]), a §YRadykalizacja§! wzrośnie o §R+2§! (Obecna Radykalizacja: [?radicalization|Y0]).\nJeśli nalot zakończy się §Rniepowodzeniem§!, §YOgrożenie Terrorystyczne§! pozostanie bez zmian, a §YRadykalizacja§! wzrośnie o §R+5§! (Obecna Radykalizacja: [?radicalization|Y0]).\n§RMa mniejsze prawdopodobieństwo sukcesu niż rajdy.§!\n\nNalot ma bazowe prawdopodobieństwo sukcesu §Y25%§!\nKażdy poziom §YSzkolenia Przeciwterrorystycznego§! zwiększa prawdopodobieństwo sukcesu o §G+5,00%§!\n(Obecny Poziom §YSzkolenia Przeciwterrorystycznego§!: [?ct_training|Y2])\n"
