--- a/localisation/polish/MD_techs_l_polish.yml
+++ b/localisation/polish/MD_techs_l_polish.yml
@@ -801,7 +801,7 @@
  satcom_desc: "Dzięki systemom komunikacji satelitarnej nasze siły będą mogły szybko i bezpiecznie komunikować się na całym świecie, planować i wykonywać misje przy minimalnym czasie potrzebnym na planowanie."
  advanced_comm_encryption: "Zaawansowane szyfrowanie komunikacji"
  advanced_comm_encryption_desc: "Rozwijając i wykorzystując zaawansowane systemy szyfrowania, będziemy jeszcze bardziej zabezpieczać systemy komunikacyjne przed przechwyceniem i odszyfrowaniem przez wroga."
- long_range_transmitters: "Łączność dalekiego zasięgu"
+ long_range_transmitters: "Komunikacja dalekiego zasięgu"
  long_range_transmitters_desc: "Budując mniejsze i lżejsze systemy łączności dalekiego zasięgu, nasze siły na polu bitwy będą mogły bez problemu komunikować się i koordynować działania na duże odległości."
  burst_transmitter_systems: "Systemy transmisji impulsowej"
  burst_transmitter_systems_desc: "Wykorzystując systemy transmisji impulsowej, nasze siły będą miały większe bezpieczeństwo komunikacji i będą mniej podatne na wysiłki związane z triangulacją radiową, co sprawi, że nasze siły będą trudniejsze do wykrycia."
@@ -825,7 +825,7 @@
  ambush_operations: "Operacje zasadzkowe"
  ambush_operations_desc: "Atakowanie z ukrytych miejsc i okopywanie się na pozycjach pozwoli nam zaskoczyć wroga."
  peaceful_civilian_coersion: "Pokojowy przymus cywilny"
- peaceful_civilian_coersion_desc: "Dzięki współpracy z ludnością cywilną i zdobywaniu jej poparcia będziemy lepiej zaopatrzeni i przygotowani do przyszłych działań."
+ peaceful_civilian_coersion_desc: "Współpracując z ludnością cywilną i uzyskując jej wsparcie, będziemy lepiej zaopatrzeni i wyposażeni na potrzeby naszych przyszłych działań."
  violent_civilian_coersion: "Brutalny przymus cywilny"
  violent_civilian_coersion_desc: "Pobicia, porwania i nie tylko; brutalne działania szybko zapewnią nam wsparcie potrzebne do dalszej walki z najeźdźcami."
  hit_and_run_raids: "Naloty Uderz i Uciekaj"
@@ -1172,8 +1172,6 @@
  all_terrain_vehicles_desc: "Dbając o to, aby opony, zawieszenie i układy napędowe działały w każdym terenie, możemy pozwolić naszym jednostkom konnym walczyć na każdym polu bitwy."
  uparmor_packages: "Pakiety wzmacniające"
  uparmor_packages_desc: "Aby zapewnić lepszą ochronę na polu bitwy, nasze jednostki konne zostaną wyposażone w ulepszenia pancerza, aby lepiej chronić żołnierzy i ich sprzęt."
- high_efficency_engines: "Silniki o wysokiej wydajności"
- high_efficency_engines_desc: "Dzięki postępowi technologicznemu nasze pojazdy użytkowe będą miały lepsze osiągi silnika, zmniejszając zużycie paliwa i zwiększając ich niezależność od linii zasilających."
  mine_resistant_vehicles: "Pojazdy odporne na miny"
  mine_resistant_vehicles_desc: "Budując pojazdy zaprojektowane do ochrony przed minami i IED, możemy zapewnić naszym żołnierzom bezpieczeństwo bez względu na pole bitwy, na którym będą walczyć."
  rapid_manuver_force: "Siła szybkiego manewru"
@@ -4790,3 +4788,5 @@
  GER_RODS3: "Pręty uranowe"
  CAT_western: "Zachodnia doktryna walki"
  CAT_eastern: "Wschodnia doktryna walki"
+ high_efficiency_engines: "Silniki o wysokiej wydajności"
+ high_efficiency_engines_desc: "Dzięki postępowi technologicznemu nasze pojazdy użytkowe będą miały lepsze osiągi silnika, zmniejszając zużycie paliwa i zwiększając ich niezależność od linii zasilających."
