--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -42,9 +42,9 @@
  H_infantry_weapons6_desc: "Ciężka broń piechoty to broń piechoty, która wymaga całej załogi do poruszania się i obsługi, np. ciężkie karabiny maszynowe, moździerze i roboty bojowe. Ta broń i obsługujący ją żołnierze są zwykle zorganizowani w Oddziały Broni."
  H_infantry_weapons7: "H. Broń 2035"
  H_infantry_weapons7_desc: "Ciężka broń piechoty to broń piechoty, która wymaga całej załogi do poruszania się i obsługi, np. ciężkie karabiny maszynowe, moździerze i roboty bojowe. Ta broń i obsługujący ją żołnierze są zwykle zorganizowani w Oddziały Broni."
- diesel_attack_submarine_desc: ""
- Nuclear_carrier_desc: ""
- N_B_Cruiser_desc: ""
+ diesel_attack_submarine_desc: "Typowe okręty podwodne o napędzie konwencjonalnym to okręty podwodne zaprojektowane do atakowania i zatapiania innych łodzi podwodnych, statków nawodnych i statków handlowych. Wykorzystuje się je także do ochrony przyjaznych okrętów nawodnych i okrętów podwodnych wyposażonych w rakiety balistyczne."
+ Nuclear_carrier_desc: "Lotniskowiec napędzany reaktorem jądrowym. Jest to duży okręt nawodny, którego główną bronią bojową są samoloty na lotniskowcach. Opierając się na lotniskowcach o napędzie atomowym, kraj może wywierać presję militarną i prowadzić operacje na innych krajach oddalonych od jego terytorium, bez polegania na lokalnych lotniskach."
+ N_B_Cruiser_desc: "Wyposażone w krążowniki liniowe o napędzie atomowym, ich zasięg i zasięg zaopatrzenia zostały znacznie poprawione, a ich przeżywalność i możliwości ataku w czasie wojny zostały znacznie poprawione."
  night_vision_1_desc: "Urządzenia pasywne pierwszej generacji, wprowadzone podczas wojny w Wietnamie, były adaptacją wcześniejszej technologii aktywnej GEN 0 i opierały się na świetle otoczenia zamiast źródła światła podczerwonego. Wykorzystując fotokatodę S-20, ich wzmacniacze obrazu wytwarzają wzmocnienie światła około 1000x, ale są dość nieporęczne i do prawidłowego działania wymagają światła księżyca."
  night_vision_2_desc: "Urządzenia drugiej generacji są wyposażone w ulepszoną lampę wzmacniającą obraz wykorzystującą płytkę mikrokanałową (MCP) z fotokatodą S-25, co zapewnia znacznie jaśniejszy obraz, zwłaszcza na krawędziach obiektywu. Prowadzi to do zwiększonego oświetlenia w warunkach słabego oświetlenia otoczenia, takich jak noce bezksiężycowe. Wzmocnienie światła wynosi około 20 000x. Poprawiono także rozdzielczość obrazu i niezawodność."
  night_vision_3_desc: "Systemy noktowizyjne trzeciej generacji zachowują MCP z Gen II, ale teraz wykorzystują fotokatodę wykonaną z arsenku galu, co dodatkowo poprawia rozdzielczość obrazu. Ponadto MCP jest pokryty warstwą bariery jonowej, która zwiększa żywotność lampy."
@@ -754,7 +754,7 @@
  BLR_artillery_3: "2A88 «Koalicja-B»"
  BLR_artillery_3_desc: "Holowana haubica z armatą 152 mm zamontowaną na samobieżnym stanowisku artyleryjskim „Koalitsiya-SV”."
  BLR_artillery_4: "D-50"
- BLR_util_vehicle_0: "ZIŁ-131"
+ BLR_util_vehicle_0: "GAZ-66"
  BLR_util_vehicle_0_desc: "Samochód ciężarowy przeznaczony do transportu zaopatrzenia i wojska, używany przez wiele armii na całym świecie."
  BLR_util_vehicle_1: "UAZ-469"
  BLR_util_vehicle_1_desc: "Samochód terenowo-pasażerski. Służy do transportu VIP-ów na podwoziu opancerzonym. Może być wyposażony w armatę. Może przewozić do 7 pasażerów i 100 kg bagażu lub 2 pasażerów i 600 kg. Samochód może ciągnąć przyczepę o masie do 850 kg."
@@ -1148,13 +1148,13 @@
  CHI_SP_R_arty_2: "PHZ-10"
  CHI_SP_R_arty_3: "PHZ-25"
  CHI_SP_R_arty_4: "PHZ-36"
- CHI_SP_arty_0: "Działo samobieżne typu 70"
- CHI_SP_arty_1: "Działo samobieżne typu 86"
+ CHI_SP_arty_0: "typu 70"
+ CHI_SP_arty_1: "typu 86"
  CHI_SP_arty_2: "PLZ-07"
  CHI_SP_arty_3: "PLZ-05"
  CHI_SP_arty_4: "PLZ-34"
- CHI_spart_equipment_0: "Działo samobieżne typu 70"
- CHI_spart_equipment_1: "Działo samobieżne typu 86"
+ CHI_spart_equipment_0: "typu 70"
+ CHI_spart_equipment_1: "typu 86"
  CHI_spart_equipment_2: "PLZ-07"
  CHI_spart_equipment_3: "PLZ-05"
  CHI_spart_equipment_4: "PLZ-34"
@@ -3515,7 +3515,7 @@
  SOV_Rec_tank_5_short: "Czołg lekki 2035"
  SOV_SP_Anti_Air_0: "ZSU-23-4 Szyłka"
  SOV_SP_Anti_Air_1: "9K35 Strela-10"
- SOV_SP_Anti_Air_2: "SA-19 ​​Tunguska"
+ SOV_SP_Anti_Air_2: "2K22 Tunguska"
  SOV_SP_Anti_Air_2_desc: "Wystrzeliwując do 8 pocisków, ta maszyna może zniszczyć każdy samolot, który stanie jej na drodze. Nie tylko to, ale może również rozrywać samoloty transportowe swoimi automatycznymi działkami."
  SOV_SP_Anti_Air_3: "Spodnieir-S1M"
  SOV_SP_Anti_Air_4: "Spodnie-S4L"
@@ -3911,14 +3911,13 @@
  SWI_util_vehicle_5_short: "Orzeł V"
  SWI_SP_Anti_Air_1: "System przeciwpancerny obrony powietrznej"
  SWI_SP_Anti_Air_1_short: "ADATA"
- TAI_infantry_weapons: "Type 57"
+ TAI_infantry_weapons: "Typ 57"
  TAI_infantry_weapons1: "M16A1"
  TAI_infantry_weapons2: "T65"
  TAI_infantry_weapons3: "T86"
  TAI_infantry_weapons4: "T91"
  TAI_infantry_weapons5: "T91K1"
  TAI_infantry_weapons6: "T112"
- TAI_infantry_weapons7: "T126"
  TAI_MBT_2: "CM-11 Odważny Tygrys"
  TAI_MBT_2_short: "CM-11"
  TAI_APC_2: "CM-21"
@@ -4036,10 +4035,6 @@
  UAE_util_vehicle_4: "Nimr"
  UAE_util_vehicle_5: "Pantera T6"
  UAE_infantry_weapons5: "SAMOCHÓD 816"
- UKR_infantry_weapons: "AKM"
- UKR_infantry_weapons1: "AK-74"
- UKR_infantry_weapons2: "AK-74N"
- UKR_infantry_weapons3: "AK-74M"
  UKR_infantry_weapons4: "Fort-221"
  UKR_infantry_weapons5: "M4-WAC-47"
  UKR_util_vehicle_0: "GAZ-66"
@@ -4211,9 +4206,9 @@
  USA_MBT_8: "Frankowie M11"
  USA_MBT_8_short: "M11"
  USA_mbt_equipment_0: "M60 Pattona"
- USA_mbt_equipment_1: "M1A1 Abrams"
+ USA_mbt_equipment_1: "M1A1 Abramsa"
  USA_mbt_equipment_2: "M1A2 Abrams"
- USA_mbt_equipment_3: "M1A3 Schwarzkopf"
+ USA_mbt_equipment_3: "M1A3 Schwarzkopfa"
  USA_mbt_equipment_4: "M11 Franek"
  USA_ifv_equipment_0: "AIFV"
  USA_ifv_equipment_1: "Strykera"
@@ -8474,7 +8469,7 @@
  CRM_Rec_tank_5_short: "Czołg lekki 2035"
  CRM_SP_Anti_Air_0: "ZSU-23-4 Szyłka"
  CRM_SP_Anti_Air_1: "9K35 Strela-10"
- CRM_SP_Anti_Air_2: "SA-19 ​​Tunguska"
+ CRM_SP_Anti_Air_2: "2K22 Tunguska"
  CRM_SP_Anti_Air_2_desc: "Wystrzeliwując do 8 rakiet, maszyna ta może zabić każdy samolot, który nadleci. Nie tylko to, ale może także niszczyć samoloty transportowe za pomocą dział automatycznych."
  CRM_SP_Anti_Air_3: "Spodnieir-S1M"
  CRM_SP_Anti_Air_4: "Spodnie-S4L"
@@ -8654,7 +8649,7 @@
  TAT_Rec_tank_5_short: "Czołg lekki 2035"
  TAT_SP_Anti_Air_0: "ZSU-23-4 Szyłka"
  TAT_SP_Anti_Air_1: "9K35 Strela-10"
- TAT_SP_Anti_Air_2: "SA-19 ​​Tunguska"
+ TAT_SP_Anti_Air_2: "2K22 Tunguska"
  TAT_SP_Anti_Air_2_desc: "Wystrzeliwując do 8 rakiet, maszyna ta może zabić każdy samolot, który nadleci. Nie tylko to, ale może także niszczyć samoloty transportowe za pomocą dział automatycznych."
  TAT_SP_Anti_Air_3: "Spodnieir-S1M"
  TAT_SP_Anti_Air_4: "Spodnie-S4L"
@@ -8733,7 +8728,7 @@
  BSH_Rec_tank_5_short: "Czołg lekki 2035"
  BSH_SP_Anti_Air_0: "ZSU-23-4 Szyłka"
  BSH_SP_Anti_Air_1: "9K35 Strela-10"
- BSH_SP_Anti_Air_2: "SA-19 ​​Tunguska"
+ BSH_SP_Anti_Air_2: "2K22 Tunguska"
  BSH_SP_Anti_Air_2_desc: "Wystrzeliwując do 8 rakiet, maszyna ta może zabić każdy samolot, który nadleci. Nie tylko to, ale może także niszczyć samoloty transportowe za pomocą dział automatycznych."
  BSH_SP_Anti_Air_3: "Spodnieir-S1M"
  BSH_SP_Anti_Air_4: "Spodnie-S4L"
@@ -8913,7 +8908,7 @@
  WAG_Rec_tank_5_short: "Czołg lekki 2035"
  WAG_SP_Anti_Air_0: "ZSU-23-4 Szyłka"
  WAG_SP_Anti_Air_1: "9K35 Strela-10"
- WAG_SP_Anti_Air_2: "SA-19 ​​Tunguska"
+ WAG_SP_Anti_Air_2: "2K22 Tunguska"
  WAG_SP_Anti_Air_2_desc: "Wystrzeliwując do 8 rakiet, maszyna ta może zabić każdy samolot, który nadleci. Nie tylko to, ale może także niszczyć samoloty transportowe za pomocą dział automatycznych."
  WAG_SP_Anti_Air_3: "Spodnieir-S1M"
  WAG_SP_Anti_Air_4: "Spodnie-S4L"
@@ -9040,7 +9035,7 @@
  PMR_Rec_tank_1_short: "2S25 Sprut-SD"
  PMR_SP_Anti_Air_0: "ZSU-23-4 Szyłka"
  PMR_SP_Anti_Air_1: "9K35 Strela-10"
- PMR_SP_Anti_Air_2: "SA-19 ​​Tunguska"
+ PMR_SP_Anti_Air_2: "2K22 Tunguska"
  PMR_SP_Anti_Air_2_desc: "Wystrzeliwując do 8 rakiet, maszyna ta może zabić każdy samolot, który nadleci. Nie tylko to, ale może także niszczyć samoloty transportowe za pomocą dział automatycznych."
  PMR_SP_R_arty_0: "BM-21 stopień"
  PMR_SP_R_arty_0_desc: "Niezbyt często używany we współczesnych operacjach, dziadek SAMS i MLRS był używany głównie podczas II wojny światowej i Afganistanu. Skuteczność na 20 km."
@@ -9102,3 +9097,8 @@
  nsb_attack_helicopter_tech_3: "Helikopter szturmowy 3. generacji"
  nsb_attack_helicopter_tech_4: "Helikopter szturmowy czwartej generacji"
  nsb_attack_helicopter_tech_5: "Helikopter szturmowy piątej generacji"
+ TAI_infantry_weapons7: "T126"
+ UKR_infantry_weapons: "AKM"
+ UKR_infantry_weapons1: "AK-74"
+ UKR_infantry_weapons2: "AK-74N"
+ UKR_infantry_weapons3: "AK-74M"
