--- a/localisation/polish/replace/replaced_from_vanilla_modifiers_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_vanilla_modifiers_l_polish.yml
@@ -2149,10 +2149,10 @@
  offices_worker_requirement_modifier: "Biura Wymagana siła robocza"
  buildings_worker_requirement_cmodifier: "Wszystkie budynki Wymagają siły roboczej"
  productivity_growth_modifier: "Miesięczny wzrost produktywności"
- civilian_factories_productivity: "Produktywność fabryk cywilnych"
- military_factories_productivity: "Produktywność fabryk wojskowych"
- dockyard_productivity: "Produktywność stoczni"
- offices_productivity: "Produktywność biur"
+ civilian_factories_productivity: "Produktywność §Yfabryk cywilnych§!"
+ military_factories_productivity: "Produktywność §Yfabryk wojskowych§!"
+ dockyard_productivity: "Produktywność §Ystoczni§!"
+ offices_productivity: "Produktywność §Ybiur§!"
  agricolture_productivity_modifier: "Produktywność rolnictwa"
  high_unemployment_threshold_modifier: "Wysoki próg bezrobocia"
  resource_sector_workers_modifier: "Pracownicy potrzebni do wydobywania surowców"
