--- a/localisation/polish/tank_modules_l_polish.yml
+++ b/localisation/polish/tank_modules_l_polish.yml
@@ -491,8 +491,8 @@
  automatic_loading_desc: "W systemie automatycznego ładowania, powszechnie stosowanym w czołgach radzieckich i rosyjskich, mechaniczny podnośnik automatycznie wciąga nowy nabój do działa. Z tego powodu naboje często są przechowywane w karuzeli pod pistoletem lub w jego pobliżu. W czołgu z automatem ładowania załoga musi dzielić przedział z ostrą amunicją. Chociaż automat ładujący zapewnia znacznie większą szybkostrzelność niż ładowanie ręczne, trafienie penetrujące często powoduje spalenie amunicji i spalenie czołgu i jego załogi na popiół.\n\n§GWskazówka projektanta: Automat ładujący zapewnia więcej możliwości utrzymuje stałą siłę ognia na celach, ale zwiększa ryzyko katastrofalnej utraty pojazdu w przypadku uszkodzenia§!"
  manual_loading: "Ładowanie ręczne"
  manual_loading_desc: "Ludzka ładowarka. W zależności od warunków, dobry ładowacz jest nawet w stanie wyprzedzić zwykły ładowacz karuzelowy. Koncepcja czwartego członka załogi przetrwała wieki dzięki dodatkowej parze rąk, którą ładowarka zapewnia do prac konserwacyjnych w terenie.\n\n§GWskazówka projektanta: jest to standardowy system ładowania dla każdego czołgu oraz opcja bezpieczna i charakteryzująca się niskim ryzykiem§!"
- revolver_magazine: "Magazynek rewolwerowy"
- revolver_magazine_desc: "Automat ładujący z tyłu wieży. Szybszy i bezpieczniejszy niż automat ładujący karuzelowy. Główną wadą tego systemu jest jego wysoka cena.\n\n§Automat ładowania rewolwerowego jest preferowanym automatem ładującym dla Twojego czołgu, jeśli chcesz zapłacić dodatkową cenę§!"
+ revolver_magazine: "Automat ładowania rewolweru"
+ revolver_magazine_desc: "Automat ładujący obsługujący wieżę. Szybszy i bezpieczniejszy niż automat ładujący karuzelowy. Główną wadą systemu jest jego wysoka cena.\n\n§GWskazówka projektanta: Automat ładowania rewolwerowego to automat ładujący wybrany dla Twojego czołgu, jeśli chcesz zapłacić dodatkową cenę§!"
  hardkill_system_gen1: "Wczesny system twardego zabijania"
  hardkill_system_gen1_desc: "System Hard-kill to aktywny środek obronny montowany na czołgu. System wykrywa nadlatujące pociski i przeciwstawia je własnym. Przeciwpociskiem może być rakieta, pocisk lub pocisk kinetyczny. Wczesne systemy twardego zabijania chronią głównie czołg przed ładunkami kumulacyjnymi.\n\n§GWskazówka projektanta: system twardego zabijania to dobry sposób na wzmocnienie pancerza naszego czołgu, aby był silniejszy§!"
  hardkill_system_gen2: "Ulepszony system twardego zabijania"
@@ -1069,7 +1069,7 @@
  ITA_mbt_hull_4: "Kadłub czołgu piątej generacji"
  ITA_mbt_hull_4_desc: "Czołg przyszłej ery. Główne czołgi bojowe stają się coraz mniej groźnymi przeciwnikami w miarę szybkiego rozwoju broni przeciwpancernej i przenoszenia ciężaru w walce na siłę powietrzną. Jeśli czołgi mają przetrwać jako uzasadniona opcja w przyszłych wojnach, będą musiały całkowicie przemyśleć na nowo swoją konstrukcję i rolę."
  USA_tank_small_medium_cannon: "105 mm M68"
- USA_tank_medium_cannon_1: "120 mm gun M5"
+ USA_tank_medium_cannon_1: "120 mm M5"
  USA_tank_medium_cannon_2: "120 mm M256"
  USA_tank_medium_cannon_3: "120 mm M360"
  USA_additional_machine_guns: "M2HB"
