--- a/localisation/russian/MD_focus_GEO_l_russian.yml
+++ b/localisation/russian/MD_focus_GEO_l_russian.yml
@@ -921,24 +921,23 @@
  GEO_kulev_terminal_desc: "Мы потратим деньги на строительство нефтяного терминала и получим больше денег обратно!"
  GEO_polminmeet_desc: "Больше друзей нам не помешает."
  ARM_GEO_rebellion_category: "Джавахетский вопрос"
- ARM_GEO_rebellion_category_desc: "Самцхе-Джавахетский регион Грузии в основном населен этническими армянами. В отличие от осетин и абхазов, они не восставали, но это может произойти в ближайшее время."
+ ARM_GEO_rebellion_category_desc: "Регион Самцхе-Джавахети в Грузии в основном населен этническими армянами. Осетины и абхазы восстали, а армяне в Грузии — нет. Возможно, если мы продолжим вести переговоры и провоцировать ситуацию, они тоже восстанут."
  ARM_GEO_rebellion: "Армянское восстание!"
  arm_didnt_spport: "Армения не поддержала Джавахкское восстание!"
  ARM_rebellion_propaganda_lev: "Армянская пропагандистская кампания"
- ARM_start_talking_proces: "Начать взаимные мирные переговоры"
- ARM_rebellion_propaganda: "Усилить этническую напряженность в Джавахке!"
+ ARM_rebellion_propaganda: "Разжигание этнической напряженности"
  ARM_send_weapons: "Контрабанда оружия в Джавахк"
  GEO_expand_autonomy: "Обещать расширение автономии"
  GEO_raids_police: "Разоружить народ"
  ARM_djavakhq: "Свободный Джавахк"
- geo_misc.9.t: "Компромиссное предложение по Джавахку!"
- geo_misc.9.d: "Другая сторона предлагает новое соглашение о предоставлении Джавахети большей политической, культурной автономии и поддержании хороших отношений между странами!"
- geo_misc.9.a: "Мы готовы к процессу переговоров. Увеличение автономии решило бы проблему."
+ geo_misc.9.t: "Компромиссное предложение Джавахка"
+ geo_misc.9.d: "[FROM.GetName] предложил мирное предложение по вопросу Джавахка. Предлагаемое решение состоит в том, чтобы предоставить армянам определенную степень автономии. Они предполагают, что это не позволит армянам чувствовать себя непредставленными в правительстве и позволит правительству Грузии сохранить контроль над их территориями. Как мы реагируем? Готовы ли мы сесть за стол переговоров?"
+ geo_misc.9.a: "Автономия решит проблему."
  geo_misc.9.b: "Вы шутите? Джавахк должен быть свободным!"
  geo_misc.9.c: "Мы готовы начать переговоры о расширении автономии..."
  geo_misc.9.d1: "Самцхе-Джавахети принадлежит нам по праву!"
  geo_misc.10.t: "Увеличение автономии в Джавахети."
- geo_misc.10.d: "Пришло время окончательно подписать резолюцию. Джавахети получит статус религиозной, культурной и языковой автономии."
+ geo_misc.10.d: "Теперь пришло время наконец подписать резолюцию. Джавахети получит статус религиозной, культурной и языковой автономии. Собираемся ли мы сделать следующий шаг?"
  geo_misc.10.a: "Мы согласны с этими условиями."
  geo_misc.10.b: "Мы готовы предоставить особый статус."
  geo_misc.11.t: "Предложение Грузинской ССР."
@@ -947,3 +946,7 @@
  geo_misc.11.b: "Может быть, ради красного октября..."
  GEO_peaceful_nats: "Мирные националисты"
  GEO_peaceful_nats_desc: "Мирные националисты"
+ ARM_GEO_drafting_peace_proposal: "Разработка мирного предложения для Джавахети"
+ ARM_start_talking_process: "Начать взаимные мирные переговоры"
+ ARM_start_talking_process_desc: "Пришло время начать взаимные мирные переговоры с правительством Грузии, чтобы обсудить мир между армянами Самцхе-Джавахети и ими самими."
+ ARM_rebellion_propaganda_desc: "Монополизация на это позволит нам вернуть этих армян на нашу территорию и устранить притеснение нашего народа. Мы должны показать им, что поддерживаем их, и спровоцировать напряженность между жителями Джавахка и правительством Грузии."
