--- a/localisation/russian/MD_focus_IND_l_russian.yml
+++ b/localisation/russian/MD_focus_IND_l_russian.yml
@@ -572,7 +572,7 @@
  indonesia.7.a: "Нет, Риау - НАШ!"
  indonesia.7.b: "Пусть забирают, нам все равно не нужен этот маленький грустный остров"
  indonesia.70.t: "Малайзия отказывается уступать Риау!"
- indonesia.70.d: "Малайзийские дипломаты недавно предупредили нас о том, что они отвергают наше предложение. Это является нарушением суверенитета Индонезии и должно быть встречено соответствующим ответом!"
+ indonesia.70.d: "Малайзийские дипломаты недавно предупредили нас о своем отклонении нашего предложения. Это нарушение суверенитета Индонезии и должно быть встречено соответствующим ответом!"
  indonesia.70.a: "Они просили об этом..."
  indonesia.700.t: "Они захватили Риау!"
  indonesia.700.d: "Похоже, наше послание было громким и ясным: Риау - наш! Малазийские дипломаты недавно сообщили нам, что государство отказалось от всех своих претензий на остров Риау. Теперь Индонезия может сделать глубокий вздох облегчения"
@@ -618,7 +618,7 @@
  indonesia.3.d: "После нашего одобрения независимости Восточного Тимора, Организация Объединенных Наций утвердила конституцию этой страны. Демократический, независимый Восточный Тимор вскоре станет нашим соседом... "
  indonesia.3.a: "Это то, чего они хотели"
  indonesia.4.t: "Тимор-Лешти свободен!"
- indonesia.4.d: "Это официально. Одобрение ООН их конституции наконец-то вступило в силу, и независимый Тимор-Лешти теперь наш сосед."
+ indonesia.4.d: "Это официально. Одобрение ООН их конституции наконец вступило в силу, и независимый Восточный Тимор теперь является нашим соседом."
  indonesia.4.a: "Давайте надеяться на хорошие отношения"
  indonesia.9.t: "Индонезия отрицает независимость Восточного Тимора!"
  indonesia.9.d: "Индонезийский режим отказал народу Восточного Тимора в свободе и независимости. Многие повстанческие группы смотрят на нас как на потенциальных освободителей, и в настоящее время в регионе и мире нагнетается напряженность..."
@@ -950,3 +950,4 @@
  IND_est2: "Может привести к §Rвойне§! с Тимором-Лешти\nи отношения с Западом §Rухудшатся§!!"
  indonesian_caliphate: "Индонезийский халифат расширяется!"
  indonesia_confront_australia_threat: "Индонезия угрожает Австралии из-за Тимора-Лешти!"
+ IND_our_policies_tt: "Мы должны завершить либо §Y$IND_new_capital$§! или §Y$IND_new_silkroad$§!"
