--- a/localisation/russian/MD_focus_LBA_l_russian.yml
+++ b/localisation/russian/MD_focus_LBA_l_russian.yml
@@ -6,7 +6,7 @@
  libya_sell_oil_fields: "Продать национальные нефтяные месторождения"
  libya_sell_oil_fields_desc: "Мы можем продать часть нефтяных месторождений, находящихся в ведении Национальной нефтяной корпорации, иностранным компаниям. Мы можем быстро заработать, но это сделает наш энергетический сектор более зависимым от других стран."
  libya_develop_oil_field_cost_bad_tt: "Базовая стоимость разработки нефтяного месторождения в Эль-Сахаре составляет §Y$3 млрд§!. Она увеличивается на [?lba_oil_nationalisation|%0R] из-за нашего §Yуровня национализации§!"
- libya_develop_oil_field_cost_tt: "Базовая стоимость разработки нефтяного месторождения в Вахе составляет §Y$6 млрд§!. Она увеличивается на [?lba_oil_nationalisation|%0R] из-за нашего §Yуровня национализации§!"
+ libya_develop_oil_field_cost_tt: "Базовая стоимость разработки нефтяного месторождения в Вахе составляет §Y$8 млрд§!. Она увеличивается на [?lba_oil_nationalisation|%0R] из-за нашего §Yуровня национализации§!"
  libya_develop_el_sahara_fields: "Разработать нефтяные месторождения Эль-Сахара"
  libya_develop_el_sahara_fields_desc: "Нефтяные месторождения Эль-Сахары расположены в районе Вади аль-Хайяа на юге Ливии. Это небольшое нефтяное месторождение в масштабах Ливии, но все же важное. Нефть, переработанная здесь, перерабатывается и хранится в §YМеллите и аз-Завии§! недалеко от Триполи. Приложив больше усилий, мы сможем расширить добычу в Эль-Сахаре.\n\nДля расширения существующих нефтяных месторождений нам необходимо подготовить объекты для хранения нефти и найти эффективные методы ее добычи."
  libya_develop_west_waha_fields: "Разработать нефтяные месторождения Западной Вахи"
@@ -255,7 +255,7 @@
  libya_anti_colonial_start_revolution_tt_1: "§R[FROM.GetNameWithFlag] может объявить нам войну на упреждение!§!\n"
  libya_anti_colonial_start_revolution_tt_2: "§GВосставшая сторона присоединится к нашей фракции!§!"
  libya_oil_nationalisation_dynamic_modifier: "Национализация нефти"
- TT_libya_oil_nationalisation_dynamic_modifier: "Уровень национализации: §Y[?lba_oil_nationalisation|%0]§!"
+ TT_libya_oil_nationalisation_dynamic_modifier: "Уровень национализации: §Y[?lba_oil_nationalisation|%0]§!\nДополнительный доход: $$[?oil_nationalisation_income|+3] миллиарда за §YДобытую нефть§!\n"
  libya_oil_nationalisation_dynamic_modifier_desc: "Большая часть добычи нефти в Ливии контролируется Национальной нефтяной корпорацией. Хотя это выгодно государству, международные инвестиции от иностранных компаний ограничены. Более высокий уровень национализации будет препятствовать росту производительности и сделает разработку новых нефтяных месторождений более дорогостоящей."
  libya_gaddafi_instability_dynamic_modifier: "Нестабильность в семье"
  libya_gaddafi_instability_dynamic_modifier_desc: "Эксцентричность Каддафи и его настойчивое стремление отдавать предпочтение своим детям в политике вызывают все большее сопротивление со стороны ливийского населения"
@@ -1333,7 +1333,7 @@
  LibyaFocus.31.d: "Исследовав долину Вади Аш-Шат, наши изыскатели нашли приличных размеров участок для нового железного рудника. Это должно значительно увеличить производство железной руды."
  LibyaFocus.31.a: "Не совсем то, что мы хотели, но все равно хорошо"
  LibyaFocus.32.t: "Найдена материнская жила"
- LibyaFocus.32.d: "Слухи правдивы! Под долиной Вади Аш-Шат находится огромное месторождение железной руды! Оно не так велико, как рассказывают, но все равно огромно. Это грандиозное событие для Ливии!"
+ LibyaFocus.32.d: "Слухи правдивы! Под долиной Вади Аш-Шат находится огромное месторождение железной руды! Он не такой большой, как рассказывают истории, но все же огромен. Это большое развитие для Ливии!"
  LibyaFocus.32.a: ":poggies:"
  LibyaFocus.33.t: "Переговоры о заключении сделки"
  LibyaFocus.33.d: "Прежде чем мы отправим предложение [?LBA_target_of_rail_project.GetNameDef], нам нужно решить, что мы им предложим. Мы можем предложить разделить стоимость проекта. Или же мы можем предложить полностью оплатить счет. Это будет дороже для нас, но [?LBA_target_of_rail_project.GetNameDef] с гораздо большей вероятностью согласится."
