--- a/localisation/russian/MD_focus_PER_l_russian.yml
+++ b/localisation/russian/MD_focus_PER_l_russian.yml
@@ -2533,7 +2533,7 @@
  IRGC_self_sufficiency_jihad_organization_idea: "Организация самодостаточного джихада КСИР"
  IRGC_self_sufficiency_jihad_organization_idea_desc: "Промышленность страны путем определения исследовательских стратегий для дальнейшей координации исследовательских процедур в области самообеспечения и разработки продукции, при создании эффективных центров системы исследований и изучения, создания культуры общения с научными и исследовательскими центрами и специализированными ассоциациями на внутреннем и международном уровнях, со специальными исследованиями Исполнительные дела институционализируются в конкретной организации исследовательских проектов и проведении параллельных расходов, связанных с исследованиями, и путем определения практических приоритетов и выявления потребностей отечественной промышленности, внимание к процедурам и систематизации в исследованиях в этой области институционализируется. \n§W--------------§!\nЭтот национальный дух будет §Rудалён§! если мы изменим §Hнашу идеологию§!"
  IRGC_idea: "КСИР"
- IRGC_idea_desc: "Корпус стражей исламской революции (КСИР) - это подразделение вооруженных сил Ирана, основанное после иранской революции 22 апреля 1979 года по приказу аятоллы Рухоллы Хомейни для защиты границ Ирана и поддержания внутреннего порядка.\n§W--------------§!\nЭтот национальный дух будет §Rудалён§§! если мы изменим §Hнашу идеологию§!"
+ IRGC_idea_desc: "Корпус стражей исламской революции (КСИР) - это подразделение вооруженных сил Ирана, основанное после иранской революции 22 апреля 1979 года по приказу аятоллы Рухоллы Хомейни для защиты границ Ирана и поддержания внутреннего порядка.\n§W--------------§!\nЭтот национальный дух будет §Rудалён§! если мы изменим §Hнашу идеологию§!"
  VAJA_idea: "Министерство разведки"
  VAJA_idea_desc: "Министерство разведки Исламской Республики Иран (VAJA) является основным разведывательным органом Исламской Республики Иран и членом разведывательного сообщества Ирана."
  industry_focus_idea: "Фокус на промышленности"
@@ -4020,10 +4020,6 @@
  iran_md.15.a: "Найти тех, кто стоит за нападением"
  iran_md.15.b: "Найти тех, кто стоит за нападением, и пресечь деятельность их организации!"
  iran_md.15.c: "В конце концов они развалятся"
- iran_md.16.t: "Летние Олимпийские игры в Иране?"
- iran_md.16.d: "К нам приехали высокопоставленные представители Олимпийских игр и предложили провести летние Олимпийские игры в Иране. Конечно, если мы согласимся, то это означает, что нам придётся предоставлять помещения и оплачивать большую часть расходов, но это серьезно повысит наш имидж на международном уровне. Если же мы откажемся, то игры будут проводиться в Пекине."
- iran_md.16.a: "Отличное предложение!"
- iran_md.16.b: "Нет, нам не нужно тратить народные деньги"
  iran_md.17.t: "Соглашения Сайруса"
  iran_md.17.d: "Наша дружба с израильтянами была подорвана десятилетиями правления Исламской Республики. Поэтому в наших интересах вновь начать переговоры и положить начало эре примирения и дружбы между нашими народами."
  iran_md.17.a: "Попросите Израиль организовать встречу"
