--- a/localisation/russian/MD_focus_SPR_l_russian.yml
+++ b/localisation/russian/MD_focus_SPR_l_russian.yml
@@ -662,7 +662,7 @@
  SPR_seat_desc: "Компания SEAT была основана в 1950 году как партнерство с Институтом национальной промышленности (INI), которому принадлежал контрольный пакет акций. Компания быстро стала одним из крупнейших поставщиков автомобилей в Испании и после тридцати шести лет независимого существования стала дочерней компанией Volkswagen. SEAT по-прежнему остается крупным производителем различных автомобилей и запчастей."
  SPR_grifols: "Grifols"
  SPR_grifols_desc: "Важный производитель медицинского оборудования, Grifols имеет огромный потенциал для развития в Испании. Увеличение производственных возможностей Grifols непременно поможет медицинскому сообществу в создании новых прорывов и позволит компании производить больше оборудования для продажи."
- SPR_court_lilly: "Court Lilly"
+ SPR_court_lilly: "Корт Лилли"
  SPR_court_lilly_desc: "Биотехнологические компании, такие как Court Lilly, имеют решающее значение для продвижения Испании в 21 веке. Если мы хотим быть лидером в области научных открытий, то мы должны создавать новые возможности для наших ученых."
  SPR_court_novartis: "Суд Novartis"
  SPR_court_novartis_desc: "Чтобы помочь медицинской промышленности, мы должны поднять фармацевтические компании на должный уровень Суд Novartis является важной фармацевтической компанией, и мы должны помочь им в развитии."
@@ -704,7 +704,7 @@
  SPR_canaries_islands_drilling_desc: "Нефть у побережья Канарских островов просто готова к добыче. Может быть, нам следует начать исследовать и эксплуатировать этот наш ресурс?"
  SPR_oil_independance: "Независимость от нефти"
  SPR_oil_independance_desc: "Большая часть наших запасов нефти остается неиспользованной, что делает нас уязвимыми для внешнего влияния в нашей стране. Мы должны стать независимыми от нефти, чтобы сохранить нашу суверенитет."
- SPR_va_verde: "Va verde"
+ SPR_va_verde: "Становится зеленым"
  SPR_va_verde_desc: "Пришло время для нас перейти на зеленую энергию. Упор на нефть прошлых дней только причинит вред нашей прекрасной стране и продолжительности нашей энергетической независимости."
  SPR_vientos_del_sur: "Ветер юга"
  SPR_vientos_del_sur_desc: "Поддержка новых ветряных электростанций на юге страны может диверсифицировать энергетический сектор Испании. Зависимость от одного источника энергии вернется и укусит нас в ближайшем будущем."
@@ -732,7 +732,7 @@
  SPR_power_of_the_vacation_desc: "Мы не можем недооценивать эффект, который отпуск окажет на туризм. Мы должны рассмотреть возможность рекламировать Испанию как место отдыха для людей."
  SPR_bbva: "BBVA"
  SPR_bbva_desc: "BBVA - один из многих банков, работающих в нашей стране, мы должны рассмотреть возможность предоставления им дополнительного офисного комплекса, чтобы они могли продолжать свою деятельность."
- SPR_banco_santander: "Banco Santander"
+ SPR_banco_santander: "Сантандер Банк"
  SPR_banco_santander_desc: "Будучи испанской компанией, Banco Santander является транснациональной компанией, предоставляющей финансовые услуги. Продвижение их услуг расширит сферу их влияния и значительно увеличит их возможности."
  SPR_mfom: "MFOM"
  SPR_mfom_desc: "Помощь министерства развития будет способствовать строительству новых дорог, домов и общественных работ."
@@ -876,7 +876,7 @@
  SPR_babieca_programme_desc: "Транспортный вертолет Babieca - это последний прорыв в испанской технологии. Благодаря возможности производить новые вертолеты, мы можем быть спокойны, зная, что миссии по развертыванию не будут кошмаром."
  SPR_the_babieca_transport_helicopter: "Транспортный вертолет Babieca"
  SPR_the_babieca_transport_helicopter_desc: "Нам нужны новые транспортные вертолеты для переброски наших людей. Наши нынешние запасы ненадежны и устарели, новая инициатива решит эту проблему."
- SPR_armada_espanola: "Armada Española"
+ SPR_armada_espanola: "ВМС Испании"
  SPR_armada_espanola_desc: "Испанский флот (Armada Española) или просто Армада - это военно-морское крыло вооруженных сил Испании. Он был основан в 15 веке и с момента своего основания непрерывно жил, участвуя в колонизации Америки и многих других глобальных конфликтах. С тех пор как большая часть империи была потеряна из-за иностранных держав и внутренних раздоров, силы оставались небольшими, но это был важный флот, продолжающий внедрять инновации."
  SPR_guard_our_coasts: "Охранять наши побережья"
  SPR_guard_our_coasts_desc: "Первой задачей нашей Армады является защита побережья Испании. Без защиты нашего побережья мы просто не можем чувствовать себя уверенно в нашей обороне."
@@ -910,11 +910,11 @@
  SPR_bases_aereas_del_sur_desc: "Южным авиабазам не помешала бы подтяжка лица."
  SPR_tedae: "TEDAE"
  SPR_tedae_desc: "Все больше и больше инвестиций в нашу техническую базу позволят нам разрабатывать все больше и больше оборудования, которое подходит для испанских военных."
- SPR_instituto_espanol_de_estudios_estrategicos: "Instituto Español de Estudios Estratégicos"
+ SPR_instituto_espanol_de_estudios_estrategicos: "Испанский институт стратегических исследований"
  SPR_instituto_espanol_de_estudios_estrategicos_desc: "Производство оборудования, разработанного здесь, и привлечение наших лучших умов к разработке нового и лучшего оборудования приведет только к успеху."
  SPR_fabricas_de_armas: "Fábricas de Armas"
  SPR_fabricas_de_armas_desc: "Финансирование наших военных заводов дополнительными ресурсами поможет снять некоторую зависимость от иностранных поставщиков."
- SPR_subsidios_industriales_militares: "Subsidios Industriales Militares"
+ SPR_subsidios_industriales_militares: "Военно-промышленные субсидии"
  SPR_subsidios_industriales_militares_desc: "Субсидирование военной промышленности поможет и продолжит снижать нашу зависимость от неместных поставщиков."
  SPR_complejo_industrial_militar: "Военно-промышленный комплекс"
  SPR_complejo_industrial_militar_desc: "Военно-промышленный комплекс Испании станет одним из самых сильных на планете. Интеграция военной и оружейной промышленности в нашу экономику окажется только выгодной для всех заинтересованных сторон."
@@ -1562,7 +1562,7 @@
  SPR_eta_3_tt: "Максимальное мнение басков - §Y85§!\n"
  SPR_eta_4_tt: "Максимальное мнение басков - §Y95§!\n"
  SPR_stifled_canarios_movement: "Канарское движение подавлено"
- SPR_unhinged_canarios_movement: "Unhinged the Canaries"
+ SPR_unhinged_canarios_movement: "Расстроили Канарские острова"
  SPR_limited_canarios_movement: "Канарское сопротивление подавлено"
  SPR_bilbao_convention_status_quo: "Сохранен баскский статус-кво"
  SPR_bilbao_convention_limit_freedoms: "Свобода Басков ограничена"
@@ -1582,8 +1582,8 @@
  SPR_absolutist_monarchy_flag: "Избрана §YАбсолютистская монархия§!"
  SPR_filed_a_motion_of_no_confidence: "Filed Motion of No-Confidence (Days Until Next Motion Can Be Filed: [?SPR_filed_a_motion_of_no_confidence:days_left|0Y])"
  SPR_initial_election_flag: "Выборы 2000 года продолжаются"
- SPR_banfighting_is_upheld: "Bullfighting is Upheld"
- SPR_bankilling_is_upheld: "Killing of the Bull is Upheld"
+ SPR_banfighting_is_upheld: "Коррида поддерживается"
+ SPR_bankilling_is_upheld: "Убийство быка поддержано"
  SPR_banfighting_is_unconstitutional: "Bullfighting Ban is Unconstiutional"
  SPR_bankilling_is_unconstitutional: "Killing Ban is Unconstiutional"
  SPR_french_execution_gangnam_flag: "Монархия была казнена"
@@ -1847,4 +1847,4 @@
  spain.267.d: "Премьер-министр Испании [SPR.GetName] посетил города Сеуту и Мелилью. Это не первый визит главы государства в эти города, но он вызвал возмущение среди представителей некоторых партий. Наиболее откровенную позицию в этом вопросе заняла партия [Neutral_conservatism_L]. Некоторые её представители коллективно заявили, что Испания должна гордиться своим национализмом и империалистическим прошлым. Они обратились к правительству с петицией, выражая своё недовольство."
  spain.267.a: "Откажитесь от визита"
  spain.267.b: "Это их город..."
- SPR_visited_ceuta: "Visited Ceuta & Melilla"
+ SPR_visited_ceuta: "Посетил Сеуту и ​​Мелилью."
