--- a/localisation/simp_chinese/MD_counter_ui_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_counter_ui_l_simp_chinese.yml
@@ -71,6 +71,6 @@
  TOPBAR_FOREIGN_INFLUENCING_TEXT: "[This.GetTopbarSelectedInfluence]"
  TOPBAR_EUROSCEPTICISM_TEXT: "[THIS.GetTopbarSelectedEuroscepticsm]"
  TOPBAR_FOREIGN_INFLUENCING_TITLE: "外国影响力"
- TOPBAR_EUROSCEPTICISM_TITLE: "欧洲怀疑主义"
+ TOPBAR_EUROSCEPTICISM_TITLE: "欧盟"
  TOPBAR_LIST_FOREIGN_INFLUENCING_TOOLTIP: "选中类型：§Y[GetTopbarSelectedInfluenceTooltip]§!\n(£click_right §Y右键点击§!) §Y右键点击§!以更改"
  TOPBAR_LIST_EUROSCEPTICSM_TOOLTIP: "选中类型：§Y[GetTopbarSelectedEuroscepticsmTooltip]§!\n(£click_right §Y右键点击§!) §Y右键点击§!以更改"
