--- a/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
@@ -907,24 +907,23 @@
  GEO_kulev_terminal_desc: "我们花钱建一个石油终端，会赚回更多的钱！"
  GEO_polminmeet_desc: "多一个朋友多一条路。"
  ARM_GEO_rebellion_category: "扎瓦赫季问题"
- ARM_GEO_rebellion_category_desc: "格鲁吉亚的萨姆茨赫-扎瓦赫季地区主要居住着亚美尼亚人。与奥赛梯人和阿布哈兹人不同，他们没有反抗我们，但现在看来可能很快就会反抗。"
+ ARM_GEO_rebellion_category_desc: "格鲁吉亚的萨姆茨赫-德贾瓦赫季地区主要居住着亚美尼亚族人。奥塞梯人和阿布哈兹人发动了叛乱，但格鲁吉亚的亚美尼亚人没有。如果我们继续谈判并煽动局势，他们也有可能叛乱。"
  ARM_GEO_rebellion: "亚美尼亚人起义！"
  arm_didnt_spport: "亚美尼亚不支持扎瓦赫季叛乱！"
  ARM_rebellion_propaganda_lev: "亚美尼亚宣传运动"
- ARM_start_talking_proces: "开始和平谈判"
- ARM_rebellion_propaganda: "加剧扎瓦赫季的种族紧张局势！"
+ ARM_rebellion_propaganda: "挑起民族紧张局势"
  ARM_send_weapons: "将武器走私到扎瓦赫季"
  GEO_expand_autonomy: "承诺扩大自治权利"
  GEO_raids_police: "解除民众武装"
  ARM_djavakhq: "自由扎瓦赫季"
- geo_misc.9.t: "扎瓦赫季妥协提案！"
- geo_misc.9.d: "对方提出新的协议，赋予扎瓦赫季更多的政治、文化自主权，维护国与国之间的良好关系！"
- geo_misc.9.a: "我们准备好进行谈话过程。扩大自主权将解决问题。"
+ geo_misc.9.t: "扎瓦赫季妥协方案"
+ geo_misc.9.d: "[FROM.GetName] 就扎瓦赫季问题提出了一项和平建议。建议的解决方案是允许亚美尼亚人享有一定程度的自治权。他们认为，这将防止亚美尼亚人感到自己在政府中没有代表，并允许格鲁吉亚政府保留对其领土的控制权。我们该如何回应？我们愿意坐在谈判桌上吗？"
+ geo_misc.9.a: "自治将解决这个问题。"
  geo_misc.9.b: "你在开玩笑？扎瓦赫季应该是自由的！"
  geo_misc.9.c: "我们准备好就增加自治权利开始谈判……"
  geo_misc.9.d1: "萨姆茨赫-扎瓦赫季理所当然地属于我们！"
  geo_misc.10.t: "扩大扎瓦赫季的自治权利"
- geo_misc.10.d: "现在，终于到了签署决议的时候了。扎瓦赫季将获得宗教、文化和语言的自治地位。"
+ geo_misc.10.d: "现在，终于到了签署决议的时候了。扎瓦赫季将获得宗教、文化和语言自治地位。我们要进行下一步吗？"
  geo_misc.10.a: "我们同意这些条款。"
  geo_misc.10.b: "我们准备给予扎瓦赫季特殊地位。"
  geo_misc.11.t: "格鲁吉亚苏维埃社会主义共和国提案"
@@ -947,3 +946,7 @@
  georgia_focus: "格鲁吉亚国策树"
  GEO_nato_standards_bases: "北约标准基础"
  GEO_nato_standards_bases_desc: "我们永远可以改善与美国的关系！"
+ ARM_GEO_drafting_peace_proposal: "为扎瓦赫季起草和平提案"
+ ARM_start_talking_process: "开始和平谈判"
+ ARM_start_talking_process_desc: "现在是时候与格鲁吉亚政府开始相互和平谈判，讨论萨姆茨赫-扎瓦赫季的亚美尼亚人与他们之间的和平了。"
+ ARM_rebellion_propaganda_desc: "垄断这一权利将使我们能够将这些亚美尼亚人带回我们的领土，并消除对我们人民的压迫。我们应该向他们表明我们支持他们，并挑起扎瓦赫季人民和格鲁吉亚政府之间的紧张关系。"
