--- a/localisation/simp_chinese/MD_focus_IND_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_IND_l_simp_chinese.yml
@@ -611,7 +611,7 @@
  indonesia.3.d: "在我们批准东帝汶独立后，联合国也批准了他们的国家宪法。一个民主、独立的东帝汶很快就会成为我们的邻居。"
  indonesia.3.a: "这是他们想要的。"
  indonesia.4.t: "东帝汶自由了！"
- indonesia.4.d: "这是官方的。联合国对其宪法的批准终于生效，独立的东帝汶现在成为我们的邻居。"
+ indonesia.4.d: "这是官方消息。联合国终于批准了东帝汶宪法，独立的东帝汶现在是我们的邻国了。"
  indonesia.4.a: "让我们期待良好的关系。"
  indonesia.9.t: "印度尼西亚否认东帝汶独立！"
  indonesia.9.d: "印度尼西亚政权剥夺了东帝汶人民的自由和独立。许多反叛组织一直将我们视为潜在的解放者，目前该地区和世界正在酝酿紧张局势……"
@@ -624,7 +624,7 @@
  indonesia.77.t: "民族紧张局势严重！"
  indonesia.77.d: "现在是解决我们国家内部激烈的种族冲突的时候了。安汶和婆罗洲等许多地方几乎每天都会发生暴力事件。如果人民因宗教信仰而互相争斗，这个国家就无法继续下去。我们现在必须坚定立场，选择我们想要支持的人（如果有的话）。"
  indonesia.77.a: "穆斯林需要我们！"
- indonesia.77.b: "我们不挑选最喜欢的，只是修复它！"
+ indonesia.77.b: "我们不挑最喜欢的，只是修复它！"
  indonesia.77.c: "基督徒需要我们！"
  indonesia.1000.t: "议会暴乱"
  indonesia.1000.d: "几个月的骚乱和冲突终于让我们走到了这一步我们的支持者和追随者成功地冲击了印尼议会，要求几位关键人物下台，所有人都服从了。印度尼西亚人民现在摆脱了永恒的暴政，这就是所谓的民主。"
@@ -950,3 +950,4 @@
  IND_purchase_rafale_jets_desc: "我们的西方朋友向我们提供了他们最新、最好的多用途喷气机，但这是有代价的。我们应该考虑这一点，因为我们可以与他们拉近关系并获得西方飞机。"
  IND_cede_riau: "割让廖内群岛"
  IND_cede_riau_desc: "割让廖内群岛将解决我们的很多问题。为了一个小岛而战不值得。"
+ IND_our_policies_tt: "我们必须完成§Y$IND_new_capital$§!与§Y$IND_new_silkroad$§!任一国策"
