--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -2521,10 +2521,10 @@
  ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§Y军用工厂劳动力需求§!：[?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
  ITA_modify_offices_worker_requirement_modifier_effect_TT: "§Y办公园区劳动力需求§!：[?ITA_offices_worker_requirement_modifier_change|%-]\n"
  ITA_modify_energy_gain_TT: "§Y发电量§!：[?ITA_energy_gain_change|+]GW\n"
- ITA_modify_reform_expectance_effect_TT: "§Y改革前景§!：[?drift_switch_change|3+]\n"
  ITA_treaty_of_benghazi_TT: "已与[LBA.GetNameWithFlag]签署§Y班加西条约§!"
  ITA_modify_article_18: "修改劳工法第十八条"
  ITA_modify_article_18_desc: "劳工法第十八条规定雇主很难解雇员工，我们的就业市场也因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
  ITA_modify_article_18_decision: "修改劳工法第十八条"
  ITA_modify_article_18_decision_desc: "劳工法第十八条规定雇主很难解雇员工，我们的就业市场也因此受到影响。修改该法肯定会引发反对派的“强迫劳动”和“奴役”指控，但这在现实中只是常识。"
  ITA_modify_article_18_decision_repeal: "撤回劳工法第十八条的修改。"
+ ITA_modify_reform_expectancy_effect_TT: "§Y改革预期§!: [?drift_switch_change|3+]\n"
