--- a/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_LBA_l_simp_chinese.yml
@@ -6,7 +6,7 @@
  libya_sell_oil_fields: "出售国有油田"
  libya_sell_oil_fields_desc: "我们可以将国家石油公司经营的一些油田出售给外国公司。我们可以赚快钱，但这将使我们的能源部门更加依赖其他国家。"
  libya_develop_oil_field_cost_bad_tt: "开发撒哈拉油田的基本成本为§Y$3 B§!。由于我们的§Y国有化水平§!，这一数字增加了[?lba_oil_nationalisation|%0R]。"
- libya_develop_oil_field_cost_tt: "开发瓦哈油田的基本成本为§Y$6 B§!。由于我们的§Y国有化水平§!，这一数字增加了[?lba_oil_nationalisation|%0R]。"
+ libya_develop_oil_field_cost_tt: "开发瓦哈油田的基本成本为§Y$8B§!。由于我们的§Y国有化水平§!，这一数字增加了[?lba_oil_nationalisation|%0R]。"
  libya_develop_el_sahara_fields: "开发沙拉拉油田"
  libya_develop_el_sahara_fields_desc: "沙拉拉油田位于利比亚南部瓦迪哈亚区，在利比亚的油田规模中，沙拉拉油田规模较小，但仍然具有重要意义。这里提炼的石油在的黎波里附近的§Y梅利塔赫和扎维耶§!进行加工并储存。通过加大努力，我们可以扩大在撒哈拉的生产。\n\n为了扩大我们现有的油田，我们需要准备储存石油的设施并找到有效的开采石油的方法。"
  libya_develop_west_waha_fields: "开发瓦哈西部油田"
@@ -255,7 +255,7 @@
  libya_anti_colonial_start_revolution_tt_1: "§R[FROM.GetNameWithFlag]可能会先发制人地向我们宣战！§!\n"
  libya_anti_colonial_start_revolution_tt_2: "§G反叛的一方将会加入我们的阵营！§!"
  libya_oil_nationalisation_dynamic_modifier: "石油国有化"
- TT_libya_oil_nationalisation_dynamic_modifier: "国有化水平：§Y[?lba_oil_nationalisation|%0]§!"
+ TT_libya_oil_nationalisation_dynamic_modifier: "国有化水平：§Y[?lba_oil_nationalisation|%0]§!\n额外收入：每§Y开采一单位石油§!将获得$$[?oil_nationalisation_income|+3]B收入\n"
  libya_oil_nationalisation_dynamic_modifier_desc: "利比亚大部分石油生产由国家石油公司控制。虽然这对国家有利，但外国公司的国际投资有限。更高程度的国有化将损害我们的生产力增长，并使开发新油田的成本更高。"
  libya_gaddafi_instability_dynamic_modifier: "家庭不稳定"
  libya_gaddafi_instability_dynamic_modifier_desc: "卡扎菲的怪癖和他坚持在政治上偏袒自己的孩子引起了利比亚民众越来越多的抵制。"
@@ -1333,7 +1333,7 @@
  LibyaFocus.31.d: "在探索了沙提省山谷之后，我们的勘探者发现了一个面积合适的新铁矿场地，这将大大增加我们的铁矿石产量。"
  LibyaFocus.31.a: "虽然不完全是我们想要的，但还是很好。"
  LibyaFocus.32.t: "发现主矿脉"
- LibyaFocus.32.d: "传言是真的！沙提省山谷下蕴藏着大量铁矿石！它并不像传说中那么大，但仍然很庞大。这对利比亚来说是一个重大的发展！"
+ LibyaFocus.32.d: "传言是真的！沙提省山谷下蕴藏着大量铁矿石！它并不像传说中那么大，但仍然很庞大。这对利比亚来说是一个巨大的进步！"
  LibyaFocus.32.a: "令人惊讶"
  LibyaFocus.33.t: "谈判交易"
  LibyaFocus.33.d: "在向[?LBA_target_of_rail_project.GetNameDef]发出建议之前，我们首先需要决定向他们提出什么建议。我们可以提出分摊项目成本。或者，我们可以提出全额支付费用。这对我们来说会更昂贵，但[?LBA_target_of_rail_project.GetNameDef]更有可能同意。"
