--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -4585,8 +4585,6 @@
  all_terrain_vehicles_desc: "通过确保轮胎、悬架和驱动系统在各种地形上都能正常工作，我们可以让我们的骑兵在任何战场上作战。"
  uparmor_packages: "装甲升级包"
  uparmor_packages_desc: "为了在战场上得到更好的保护，我们的骑兵部队将部署装甲升级，以更好地保护部队及其装备。"
- high_efficency_engines: "高效率引擎"
- high_efficency_engines_desc: "利用技术进步，我们的多用途车辆将提高发动机性能，降低燃料消耗，并增强其对供应线的独立性。"
  mine_resistant_vehicles: "防地雷车辆"
  mine_resistant_vehicles_desc: "通过制造专门用于防御地雷和简易爆炸装置的车辆，我们可以确保我们的部队无论在哪个战场上作战都是安全的。"
  rapid_manuver_force: "快速机动部队"
@@ -4790,3 +4788,5 @@
  eye_in_the_sky_desc: "我们的武装直升机机组人员不仅接受过进攻训练，还接受过侦察训练，他们将在任何袭击之前收集有价值的情报。"
  CAT_western: "西方战斗学说"
  CAT_eastern: "东方战斗学说"
+ high_efficiency_engines: "高效率引擎"
+ high_efficiency_engines_desc: "利用技术进步，我们的多用途车辆将提高发动机性能，降低燃料消耗，并增强其对供应线的独立性。"
