--- a/localisation/braz_por/equipment_l_braz_por.yml
+++ b/localisation/braz_por/equipment_l_braz_por.yml
@@ -42,9 +42,9 @@
  H_infantry_weapons6_desc: "Armas de porte pesado nas forças armadas são armamentos de grande calibre e poder de fogo, projetados para serem utilizados em situações de combate em larga escala ou para fins estratégicos. Essas armas são tipicamente operadas por equipes especializadas e desempenham um papel importante em operações militares. Exemplo: Morteiro."
  H_infantry_weapons7: "Armas de Porte Pesado - 2035"
  H_infantry_weapons7_desc: "Armas de porte pesado nas forças armadas são armamentos de grande calibre e poder de fogo, projetados para serem utilizados em situações de combate em larga escala ou para fins estratégicos. Essas armas são tipicamente operadas por equipes especializadas e desempenham um papel importante em operações militares. Exemplo: Morteiro."
- diesel_attack_submarine_desc: "Um submarino de ataque a diesel é uma embarcação submarina projetada para operações ofensivas e defensivas. Ao contrário dos submarinos nucleares, os submarinos de ataque a diesel são impulsionados por motores a diesel, que são alimentados por combustível convencional, como diesel ou gasolina, em vez de um reator nuclear. Esses submarinos são projetados para serem furtivos e altamente manobráveis, permitindo que operem de forma sigilosa nas águas oceânicas. Eles são capazes de realizar uma variedade de missões, como vigilância, reconhecimento, ataque a alvos marítimos e terrestres, operações especiais e defesa de interesses nacionais. Os submarinos de ataque a diesel geralmente possuem sistemas de propulsão elétrica, permitindo que operem em modo silencioso, usando motores elétricos para navegação submarina sem emitir ruídos detectáveis. Eles também são equipados com torpedos, mísseis de cruzeiro ou outros armamentos para engajar alvos inimigos."
- Nuclear_carrier_desc: "É uma embarcação militar de grande porte projetada para operar aviões de combate em alto-mar. O termo \"nuclear\" refere-se à propulsão da embarcação, que é impulsionada por um reator nuclear a bordo. O porta-aviões nuclear é conhecido por sua capacidade de projeção de poder em todo o mundo, representando um dos principais ativos estratégicos das marinhas modernas. Sua propulsão nuclear oferece uma vantagem significativa em relação aos porta-aviões movidos a combustível convencional, proporcionando maior autonomia e capacidade de operação por períodos mais longos. Essas embarcações são caracterizadas por um convés de voo extenso, projetado para permitir o lançamento e recuperação seguros de aeronaves. Podem transportar uma variedade de aeronaves, incluindo caças, aviões de ataque, helicópteros e aeronaves de alerta antecipado. Além da função de transporte e operação de aeronaves, os porta-aviões nucleares também servem como plataformas estratégicas para projeção de poder, permitindo a condução de operações militares ofensivas, defensivas e de dissuasão. Eles podem ser parte integrante de uma força-tarefa naval, oferecendo suporte aéreo às operações em terra ou mar."
- N_B_Cruiser_desc: "Um cruzador de batalha é uma classe de navio de guerra que surgiu no início do século XX. Eles eram projetados para combinar a velocidade e o poder de fogo de um encouraçado com a capacidade de manobra e alcance de um cruzador. Os cruzadores de batalha eram caracterizados por sua velocidade impressionante, armamento pesado e proteção relativamente mais leve em comparação com os encouraçados tradicionais. Eles geralmente possuíam canhões de grande calibre, geralmente de 203 mm (8 polegadas) ou maiores, e eram capazes de atingir velocidades superiores a 30 nós. A ideia por trás dos cruzadores de batalha era combinar a velocidade dos cruzadores com o poder de fogo dos encouraçados, permitindo que eles atuassem como uma força de ataque rápida e versátil. Eles eram frequentemente usados para patrulhamento em áreas oceânicas e também em missões de reconhecimento, além de serem empregados em batalhas de linha de frente."
+ diesel_attack_submarine_desc: "Submarinos de ataque convencionais comuns são submarinos projetados para atacar e afundar outros submarinos, navios de superfície e navios mercantes. Eles também são usados ​​para proteger navios de superfície amigos e submarinos de mísseis balísticos."
+ Nuclear_carrier_desc: "Um porta-aviões movido por um reator nuclear. É um grande navio de superfície com aeronaves baseadas em porta-aviões como principal arma de combate. Baseando-se em porta-aviões movidos a energia nuclear, um país pode exercer pressão militar e conduzir operações em outros países distantes do seu território sem depender de aeroportos locais."
+ N_B_Cruiser_desc: "Equipados com cruzadores de batalha movidos a energia nuclear, seu alcance e alcance de abastecimento foram bastante melhorados, e sua capacidade de sobrevivência e ataque em tempo de guerra foi bastante melhorada."
  night_vision_1_desc: "Dispositivos passivos de primeira geração, introduzidos durante a Guerra do Vietnã, foram uma adaptação da tecnologia ativa anterior GEN 0 e dependem de luz ambiente em vez de uma fonte de luz infravermelha. Usando um fotocátodo S-20, seus intensificadores de imagem amplificam a luz em aproximadamente 1.000 vezes, mas são bastante volumosos e requerem luz ambiente para funcionar corretamente."
  night_vision_2_desc: "Os dispositivos de segunda geração apresentam um tubo intensificador de imagem aprimorado utilizando uma placa de microcanal (MCP) com um fotocátodo S-25, resultando em uma imagem significativamente mais brilhante, especialmente nas bordas da lente. Isso proporciona maior iluminação em ambientes com pouca luz, como noites sem lua. A amplificação da luz é de cerca de 20.000 vezes. Além disso, houve melhorias na resolução e na confiabilidade da imagem."
  night_vision_3_desc: "Os sistemas de visão noturna de terceira geração mantêm o MCP da Geração II, mas agora utilizam um fotocátodo feito de arsenieto de gálio, o que resulta em uma melhoria adicional na resolução da imagem. Além disso, o MCP é revestido com um filme de barreira de íons para aumentar a vida útil do tubo."
@@ -1053,7 +1053,7 @@
  CHI_APC_2: "ZSD-89"
  CHI_APC_2_desc: "O veículo de combate de infantaria rastreado Norinco Type 89 é um transporte de pessoal blindado chinês capaz de transportar 13 passageiros e também apresenta um casco de aço soldado e uma metralhadora antiaérea QJC88 de 12,7 mm."
  CHI_APC_3: "ZSL-92"
- CHI_APC_3_desc: "O ZSL92 (também conhecido como ZSL92) é uma família de transportes de pessoal blindados chineses sobre rodas capazes de transportar 9 passageiros e também apresenta um casco de aço soldado e um canhão automático ou uma metralhadora pesada de 12,7mm."
+ CHI_APC_3_desc: "The ZSL92 (also known as ZSL92) is a family of Chinese wheeled armored personnel carriers capable of carrying 9 passengers and also features a Welded steel hull and either an autocannon or a 12.7mm heavy machine gun."
  CHI_APC_4: "ZBD-05"
  CHI_APC_4_desc: "O veículo blindado anfíbio Type 05 é uma família de veículos blindados de combate rastreados anfíbios chineses. É capaz de transportar 8 passageiros e apresenta um casco de liga de alumínio, um canhão de 30 mm, canhão L7 de 105 mm, metralhadora de 12,7 mm e mísseis HJ-8."
  CHI_APC_5: "ZBL-09 Snow Leopard"
@@ -1077,7 +1077,7 @@
  CHI_IFV_2: "Type-86A"
  CHI_IFV_2_desc: "O Type 86, também conhecido como WZ501, é uma cópia chinesa do veículo de combate de infantaria BMP-1 russo (IFV). Possui armadura de aço soldado, um canhão de 73 mm, uma metralhadora coaxial de 7,62 mm e mísseis anti-tanque HJ-73."
  CHI_IFV_3: "ZSL-92B"
- CHI_IFV_3_desc: "O ZSL92 (também conhecido como ZSL92) é uma família de transportes de pessoal blindados chineses sobre rodas capazes de transportar 9 passageiros e também apresenta um casco de aço soldado e um canhão automático ou uma metralhadora pesada de 12,7mm."
+ CHI_IFV_3_desc: "The ZSL92 (also known as ZSL92) is a family of Chinese wheeled armored personnel carriers capable of carrying 9 passengers and also features a Welded steel hull and either an autocannon or a 12.7mm heavy machine gun."
  CHI_IFV_4: "ZBD-04"
  CHI_IFV_4_desc: "O ZBD-04 ou Type 04 (designação industrial WZ502) é um veículo de combate de infantaria chinês. Pode transportar 7 passageiros e possui um canhão de 100 mm, um canhão automático de 30 mm, uma metralhadora coaxial de 7,62 mm e mísseis anti-tanque HJ-8."
  CHI_IFV_5: "ZBD-08"
@@ -1148,13 +1148,13 @@
  CHI_SP_R_arty_2: "PHZ-10"
  CHI_SP_R_arty_3: "PHZ-25"
  CHI_SP_R_arty_4: "PHZ-36"
- CHI_SP_arty_0: "Type 70 SPG"
- CHI_SP_arty_1: "Type 86 SPG"
+ CHI_SP_arty_0: "Type 70"
+ CHI_SP_arty_1: "Type 86"
  CHI_SP_arty_2: "PLZ-07"
  CHI_SP_arty_3: "PLZ-05"
  CHI_SP_arty_4: "PLZ-34"
- CHI_spart_equipment_0: "Type 70 SPG"
- CHI_spart_equipment_1: "Type 86 SPG"
+ CHI_spart_equipment_0: "Type 70"
+ CHI_spart_equipment_1: "Type 86"
  CHI_spart_equipment_2: "PLZ-07"
  CHI_spart_equipment_3: "PLZ-05"
  CHI_spart_equipment_4: "PLZ-34"
@@ -3918,7 +3918,6 @@
  TAI_infantry_weapons4: "T91"
  TAI_infantry_weapons5: "T91K1"
  TAI_infantry_weapons6: "T112"
- TAI_infantry_weapons7: "T126"
  TAI_MBT_2: "CM-11 Brave Tiger"
  TAI_MBT_2_short: "CM-11"
  TAI_APC_2: "CM-21"
@@ -4036,10 +4035,6 @@
  UAE_util_vehicle_4: "Nimr"
  UAE_util_vehicle_5: "Panthera T6"
  UAE_infantry_weapons5: "CAR 816"
- UKR_infantry_weapons: "AKM"
- UKR_infantry_weapons1: "AK-74"
- UKR_infantry_weapons2: "AK-74N"
- UKR_infantry_weapons3: "AK-74M"
  UKR_infantry_weapons4: "Fort-221"
  UKR_infantry_weapons5: "M4-WAC-47"
  UKR_util_vehicle_0: "GAZ-66"
@@ -9102,3 +9097,8 @@
  nsb_attack_helicopter_tech_3: "Helicóptero de ataque de 3ª geração"
  nsb_attack_helicopter_tech_4: "Helicóptero de ataque de 4ª geração"
  nsb_attack_helicopter_tech_5: "Helicóptero de ataque de 5ª geração"
+ TAI_infantry_weapons7: "T126"
+ UKR_infantry_weapons: "AKM"
+ UKR_infantry_weapons1: "AK-74"
+ UKR_infantry_weapons2: "AK-74N"
+ UKR_infantry_weapons3: "AK-74M"
