--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -456,7 +456,7 @@
  BLR_Adopt_EU_Intellectual: "Adopt EU Intellectual Property Laws"
  BLR_Adopt_EU_Intellectual_desc: "EU Intellectual Property laws need to be adopted to comply with European standards in this area."
  BLR_Digitalization: "Digitalization"
- BLR_Digitalization_desc: "It is necessary to digitalize production to improve its quality."
+ BLR_Digitalization_desc: "It is necessary to digitize production to improve its quality."
  BLR_political_platforms: "Creating Political Platforms for Foreign Companies"
  BLR_political_platforms_desc: "Perhaps we should allow this to foreign companies?"
  BLR_Custom_Institutional_reforms: "Bio Fuel"
