--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -1822,7 +1822,7 @@
  party_leadership_change_TT: "This will change the party leadership."
  ITA_five_star_movement_founded: "The 5 Stars Movement has been founded"
  ITA_salvini_took_over_lega: "Matteo Salvini has taken control of Lega Nord"
- treasury_lower_than_10_tt: "Treasury is lower than 10 bilions"
+ treasury_lower_than_10_tt: "Treasury is lower than 10 billions"
  mafia_foreign_investment_flag: "§tMafia§! infiltrating foreign investment projects."
  italeave_referendum_leave: "Italeave:§YLeave§!\n"
  italeave_referendum_remain: "Italeave:§YRemain§!\n"
@@ -1924,7 +1924,7 @@
  ITA_specialize_logistics_spirit_loc_2: "§YCivilian Trains§! Production Cost: §G-10%§!\n§YUtility Vehicle§! Production Cost: §G-10%§!"
 
 #multipurpose modifier scripted effects tooltips
- ITA_modify_additional_expenses_effect_TT: "This will modify our weekly expenses by: [?additional_expenses_change|-] bilions\n"
+ ITA_modify_additional_expenses_effect_TT: "This will modify our weekly expenses by: [?additional_expenses_change|-] billions\n"
  ITA_modify_nimby_modifier_effect_TT: "This will modify the effect of NIMBYs by: [?nimby_culture_change|%+]\n"
  ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§YTax Revenue Multiplier§!: [?ITA_tax_gain_multiplier_modifier_change|%+] \n"
  ITA_modify_interest_rate_multiplier_modifier_effect_TT: "§YInterest Rate§!: [?ITA_interest_rate_multiplier_modifier_change|-] %\n"
@@ -1982,18 +1982,18 @@
  ITA_modify_agricolture_productivity_modifier_effect_TT: "§YAgriculture Productivity§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
  ITA_modify_civilian_factories_productivity_effect_TT: "§YCivilian Factories Productivity§!: [?ITA_civilian_factories_productivity_change|%+]\n"
  ITA_modify_military_factories_productivity_effect_TT: "§YMilitary Factories Productivity§!: [?ITA_military_factories_productivity_change|%+]\n"
- ITA_modify_dockyard_productivity_effect_TT: "§YDockyards Productivity§§!: [?ITA_dockyard_productivity_change|%+]\n"
- ITA_modify_offices_productivity_effect_TT: "§YOffices Productivity§§!: [?ITA_offices_productivity_change|%+]\n"
+ ITA_modify_dockyard_productivity_effect_TT: "§YDockyards Productivity§!: [?ITA_dockyard_productivity_change|%+]\n"
+ ITA_modify_offices_productivity_effect_TT: "§YOffices Productivity§!: [?ITA_offices_productivity_change|%+]\n"
  ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YCivilian Factories Workforce Required§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMilitary Factories Workforce Required§§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YOffices Workforce Required§§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMilitary Factories Workforce Required§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YOffices Workforce Required§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
  ITA_modify_energy_gain_TT: "§YPower Generated§!: [?ITA_energy_gain_change|+] GW\n"
 
  #dynamic modifiers
  ITA_civil_war_partisan_activity: "Partisan Activity"
  ITA_civil_war_partisan_activity_TT: "As expected from such a divisive conflict, a significant portion of the civilian population, while not directly fighting, offers intel, supplies, shelter and protection to soldiers of the side it sympathizes for."
  xylella_epidemic: "Xylella Epidemic"
- xylella_epidemic_TT: "Xylella fastidiosa is a very damaging pest that is especially dangerous for olive trees.\n\n This will increase our weekly additional expenses by §R0.05§! bilions."
+ xylella_epidemic_TT: "Xylella fastidiosa is a very damaging pest that is especially dangerous for olive trees.\n\n This will increase our weekly additional expenses by §R0.05§! billions."
  ITA_multipurpose_modifier: "Multipurpose Modifier"
  ITA_multipurpose_modifier_TT: "This dynamic modifier will store all the effects of various different focuses and decisions to avoid extra clutter of the national spirit window."
  roma_capitale_modifier: "Roma Capitale"
@@ -2235,7 +2235,7 @@
  ITA_draw_closer_to_far_east_TT: "Our influence in the Far East grows.\n §YAll Countries mentioned increase in influence, China to the greatest extent§!\n"
  ITA_reform_approval_TT: "Despite being a major Western country with strong cultural ties to the USA and Europe, the Italian political and economical culture is much more akin to that of a South American country like Argentina, with Peronist and Neo-Keynesian views dominant across all parties, even those that proclaim themselves as liberal. Due to this, any attempt at liberalization will be hardly digested by the population unless the dominant culture sees a major shift."
  ITA_unlock_policy_decision_TT: "This focus will unlock a decision to enact the related policy."
- ITA_modify_reform_expectance_effect_TT: "§YReform Expectance§!: [?drift_switch_change|3+]\n"
+ ITA_modify_reform_expectancy_effect_TT: "§YReform Expectancy§!: [?drift_switch_change|3+]\n"
  ITA_ruling_party_popularity_change_decision_TT: "The party popularity change caused by this decision depends on the current ruling party."
  ITA_tax_evasion_TT: "Decrease §YTax Revenue§! by §R10%§!\n"
  ITA_building_abuse_TT: "Decrease §YTax Revenue§! by §R5%§!\n"
