--- a/localisation/english/tank_modules_l_english.yml
+++ b/localisation/english/tank_modules_l_english.yml
@@ -1165,7 +1165,7 @@
  ## USA ##
  USA_tank_small_medium_cannon: "105 mm M68"
  USA_tank_small_medium_cannon_2: "105 mm M68A1"
- USA_tank_medium_cannon_1: "120 mm gun M5"
+ USA_tank_medium_cannon_1: "120 mm M5"
  USA_tank_medium_cannon_2: "120 mm M256"
  USA_tank_medium_cannon_3: "120 mm M360"
  USA_additional_machine_guns: "M2HB"
