--- a/localisation/polish/MD_focus_ITA_l_polish.yml
+++ b/localisation/polish/MD_focus_ITA_l_polish.yml
@@ -1898,69 +1898,69 @@
  ITA_specialize_logistics_spirit_loc_1: "§YSamolot transportowy§! Koszt produkcji: §G-10%§!\n§YHelikopter transportowy§! Koszt produkcji: §G-10%§!"
  ITA_specialize_logistics_spirit_loc_2: "§YPociągi cywilne§! Koszt produkcji: §G-10%§!\n§YPojazd użytkowy§! Koszt produkcji: §G-10%§!"
  ITA_modify_additional_expenses_effect_TT: "To zmieni nasze tygodniowe wydatki o: [?additional_expenses_change|-] miliardów\n"
- ITA_modify_nimby_modifier_effect_TT: "This will modify the effect of NIMBYs by: [?nimby_culture_change|%+]\n"
- ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§YTax Revenue Multiplier§!: [?ITA_tax_gain_multiplier_modifier_change|%+] \n"
- ITA_modify_interest_rate_multiplier_modifier_effect_TT: "§YInterest Rate§!: [?ITA_interest_rate_multiplier_modifier_change|-] %\n"
- ITA_modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§YBureaucracy Cost§!: [?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_police_cost_multiplier_modifier_effect_TT: "§YPolice Spending Cost§!: [?ITA_police_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_education_cost_multiplier_modifier_effect_TT: "§YEducation Cost§!: [?ITA_education_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_health_cost_multiplier_modifier_effect_TT: "§YHealthcare Cost§!: [?ITA_health_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_social_cost_multiplier_modifier_effect_TT: "§YSocial Spending Cost§!: [?ITA_social_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_army_personnel_cost_multiplier_modifier_effect_TT: "§YArmy Wages§!: [?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§YNavy Wages§!: [?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_airforce_personnel_cost_multiplier_modifier_effect_TT: "§YAirforce Wages§!: [?ITA_airforce_personnel_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_equipment_cost_multiplier_modifier_effect_TT: "§YArmy Equipment Cost§!: [?ITA_equipment_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_global_building_slots_factor_effect_TT: "§YMax Factories in State§!: [?ITA_global_building_slots_factor_change|%+]\n"
- ITA_modify_MONTHLY_POPULATION_effect_TT: "§YMonthly Population§!: [?ITA_MONTHLY_POPULATION_change|%+]\n"
- ITA_modify_production_speed_buildings_factor_effect_TT: "§YConstruction Speed§!: [?ITA_production_speed_buildings_factor_change|%+]\n"
- ITA_modify_stability_factor_effect_TT: "§YStability§!: [?ITA_stability_factor_change|%+]\n"
- ITA_modify_stability_weekly_effect_TT: "§YWeekly Stability§!: [?ITA_stability_weekly_change|%+]\n"
- ITA_modify_research_speed_factor_effect_TT: "§YResearch Speed§!: [?ITA_research_speed_factor_change|%+]\n"
- ITA_modify_army_org_regain_effect_TT: "§YArmy Organization Recovery Rate§!: [?ITA_army_org_regain_change|%+]\n"
- ITA_modify_army_org_Factor_effect_TT: "§YArmy Organization§!: [?ITA_army_org_Factor_change|%+]\n"
- ITA_modify_repair_speed_factor_effect_TT: "§YNaval Repair Speed§!: [?ITA_repair_speed_factor_change|%+]\n"
- ITA_modify_refit_speed_effect_TT: "§YNaval Refit Speed§!: [?ITA_refit_speed_change|%+]\n"
- ITA_modify_positioning_effect_TT: "§YPositioning§!: [?ITA_positioning_change|%+]\n"
- ITA_modify_screening_without_screens_effect_TT: "§YScreening without Screens§!: [?ITA_screening_without_screens_change|%+]\n"
- ITA_modify_org_loss_when_moving_effect_TT: "§YOrganization Loss when Moving§!: [?ITA_org_loss_when_moving_change|%-]\n"
+ ITA_modify_nimby_modifier_effect_TT: "Spowoduje to modyfikację efektu NIMBY poprzez: [?nimby_culture_change|%+]\n"
+ ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§YMnożnik dochodów podatkowych§!: [?ITA_tax_gain_multiplier_modifier_change|%+] \n"
+ ITA_modify_interest_rate_multiplier_modifier_effect_TT: "§YOprocentowanie§!: [?ITA_interest_rate_multiplier_modifier_change|-] %\n"
+ ITA_modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§YKoszt biurokracji§!: [?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_police_cost_multiplier_modifier_effect_TT: "§YKoszt wydatków policji§!: [?ITA_police_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_education_cost_multiplier_modifier_effect_TT: "§YKoszt edukacji§!: [?ITA_education_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_health_cost_multiplier_modifier_effect_TT: "§YKoszt opieki zdrowotnej§!: [?ITA_health_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_social_cost_multiplier_modifier_effect_TT: "§YKoszt wydatków socjalnych§!: [?ITA_social_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_army_personnel_cost_multiplier_modifier_effect_TT: "§YPłace armii§!: [?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§YPłace Marynarki Wojennej§!: [?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_airforce_personnel_cost_multiplier_modifier_effect_TT: "§YPłace w lotnictwie§!: [?ITA_airforce_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_equipment_cost_multiplier_modifier_effect_TT: "§YKoszt wyposażenia armii§!: [?ITA_equipment_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_global_building_slots_factor_effect_TT: "§YMaksymalne fabryki w stanie§!: [?ITA_global_building_slots_factor_change|%+]\n"
+ ITA_modify_MONTHLY_POPULATION_effect_TT: "§YMiesięczna populacja§!: [?ITA_MONTHLY_POPULATION_change|%+]\n"
+ ITA_modify_production_speed_buildings_factor_effect_TT: "§YSzybkość budowy§!: [?ITA_production_speed_buildings_factor_change|%+]\n"
+ ITA_modify_stability_factor_effect_TT: "§YStabilność§!: [?ITA_stability_factor_change|%+]\n"
+ ITA_modify_stability_weekly_effect_TT: "§YTygodniowa stabilność§!: [?ITA_stability_weekly_change|%+]\n"
+ ITA_modify_research_speed_factor_effect_TT: "§YSzybkość badań§!: [?ITA_research_speed_factor_change|%+]\n"
+ ITA_modify_army_org_regain_effect_TT: "§YWskaźnik odzyskiwania organizacji armii§!: [?ITA_army_org_regain_change|%+]\n"
+ ITA_modify_army_org_Factor_effect_TT: "§YOrganizacja armii§!: [?ITA_army_org_Factor_change|%+]\n"
+ ITA_modify_repair_speed_factor_effect_TT: "§YSzybkość naprawy marynarki wojennej§!: [?ITA_repair_speed_factor_change|%+]\n"
+ ITA_modify_refit_speed_effect_TT: "§YSzybkość remontu marynarki wojennej§!: [?ITA_refit_speed_change|%+]\n"
+ ITA_modify_positioning_effect_TT: "§YPozycjonowanie§!: [?ITA_positioning_change|%+]\n"
+ ITA_modify_screening_without_screens_effect_TT: "§YSeans bez ekranów§!: [?ITA_screening_without_screens_change|%+]\n"
+ ITA_modify_org_loss_when_moving_effect_TT: "§YUtrata organizacji podczas przeprowadzki§!: [?ITA_org_loss_when_moving_change|%-]\n"
  ITA_modify_army_attack_factor_effect_TT: "§YAtak wojskowy§! [?ITA_army_attack_factor_change|%+]\n"
- ITA_modify_army_defence_factor_effect_TT: "§YArmy Defence§!: [?ITA_army_defence_factor_change|%+]\n"
- ITA_modify_training_time_factor_effect_TT: "§YArmy Training Time§!: [?ITA_training_time_factor_change|%-]\n"
- ITA_modify_attrition_effect_TT: "§YArmy Attrition§!: [?ITA_attrition_change|%-]\n"
- ITA_modify_conscription_effect_TT: "§YRecruitable Population§!: [?ITA_conscription_change|%+]\n"
- ITA_modify_justify_war_goal_time_effect_TT: "§YJustify War Goal Time§!: [?ITA_justify_war_goal_time_change|%-]\n"
- ITA_modify_supply_consumption_factor_effect_TT: "§YArmy Supply Consumption§!: [?ITA_supply_consumption_factor_change|%-]\n"
- ITA_modify_navy_fuel_consumption_factor_effect_TT: "§YNaval Fuel Consumption§!: [?ITA_navy_fuel_consumption_factor_change|%-]\n"
- ITA_modify_navy_max_range_factor_TT: "§YNaval Range§!: [?ITA_navy_max_range_factor_change|%+]\n"
- ITA_modify_production_factory_max_efficiency_factor_TT: "§YProduction Efficiency Cap§!: [?ITA_production_factory_max_efficiency_factor_change|%+]\n"
- ITA_modify_production_factory_efficiency_gain_factor_TT: "§YProduction Efficiency Growth§!: [?ITA_production_factory_efficiency_gain_factor_change|%+]\n"
- ITA_modify_license_production_speed_TT: "§YLicenced Equipment Production Speed§!: [?ITA_license_production_speed_change|%+]\n"
- ITA_modify_send_volunteer_divisions_required_effect_TT: "§YMax Intervention Force Divisions§!: [?ITA_send_volunteer_divisions_required_change|%-]\n"
- ITA_modify_air_volunteer_cap_effect_TT: "§YMax Air Volunteer Planes§!: [?ITA_air_volunteer_cap_change|+]\n"
- ITA_modify_send_volunteer_factor_effect_TT: "§YDivisions Required for Sending Intervention Forces§!: [?ITA_send_volunteer_factor_change|%+]\n"
- ITA_modify_experience_gain_army_effect_TT: "§YArmy Experience Gain§!: [?ITA_experience_gain_army_change|+] Daily\n"
- ITA_modify_cas_damage_reduction_TT: "§YDamage Reduction Against CAS§!: [?ITA_cas_damage_reduction_change|%+]\n"
- ITA_modify_air_superiority_bonus_in_combat_TT: "§YAir Superiority Bonus in Combat§!: [?ITA_air_superiority_bonus_in_combat_change|%+]\n"
- ITA_modify_air_air_superiority_attack_factor_TT: "§YAir Superiority Mission Attack§!: [?ITA_air_air_superiority_attack_factor_change|%+]\n"
- ITA_modify_air_air_superiority_agility_factor_TT: "§YAir Superiority Mission Radar Advantage§!: [?ITA_air_air_superiority_agility_factor_change|%+]\n"
- ITA_modify_air_close_air_support_org_damage_factor_TT: "§YCAS Damage to Organization§!: [?ITA_air_close_air_support_org_damage_factor_change|%+]\n"
- ITA_modify_air_cas_efficiency_TT: "§YClose Air Support Efficiency§!: [?ITA_air_cas_efficiency_change|%+]\n"
- ITA_modify_air_strategic_bomber_bombing_factor_TT: "§YStrategic Bombing§!: [?ITA_air_strategic_bomber_bombing_factor_change|%+]\n"
- ITA_modify_industry_air_damage_factor_TT: "§YIndustry Bomb Vulnerability§!: [?ITA_industry_air_damage_factor_change|%-]\n"
- ITA_modify_foreign_influence_modifier_TT: "§YForeign Influence§!: [?ITA_foreign_influence_modifier_change|%+]\n"
- ITA_modify_foreign_influence_defense_modifier_TT: "§YForeign Influence Defense§!: [?ITA_foreign_influence_defense_modifier_change|%+]\n"
- ITA_modify_subjects_autonomy_gain_TT: "§YDaily Subject Autonomy Decrease§!: [?ITA_subjects_autonomy_gain_change|-]\n"
- ITA_modify_max_command_power_TT: "§YMax Command Power§!: [?ITA_max_command_power_change|+]\n"
- ITA_modify_transport_capacity_TT: "§YTroop Convoy Requirement§!: [?ITA_transport_capacity_change|%-]\n"
- ITA_modify_agricolture_productivity_modifier_effect_TT: "§YAgriculture Productivity§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
- ITA_modify_civilian_factories_productivity_effect_TT: "§YCivilian Factories Productivity§!: [?ITA_civilian_factories_productivity_change|%+]\n"
- ITA_modify_military_factories_productivity_effect_TT: "§YMilitary Factories Productivity§!: [?ITA_military_factories_productivity_change|%+]\n"
- ITA_modify_dockyard_productivity_effect_TT: "§YDockyards Productivity§§!: [?ITA_dockyard_productivity_change|%+]\n"
- ITA_modify_offices_productivity_effect_TT: "§YOffices Productivity§§!: [?ITA_offices_productivity_change|%+]\n"
- ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YCivilian Factories Workforce Required§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMilitary Factories Workforce Required§§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YOffices Workforce Required§§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
- ITA_modify_energy_gain_TT: "§YPower Generated§!: [?ITA_energy_gain_change|+] GW\n"
+ ITA_modify_army_defence_factor_effect_TT: "§YObrona armii§!: [?ITA_army_defence_factor_change|%+]\n"
+ ITA_modify_training_time_factor_effect_TT: "§YCzas szkolenia armii§!: [?ITA_training_time_factor_change|%-]\n"
+ ITA_modify_attrition_effect_TT: "§YWyczerpanie armii§!: [?ITA_attrition_change|%-]\n"
+ ITA_modify_conscription_effect_TT: "§YPopulacja, którą można rekrutować§!: [?ITA_conscription_change|%+]\n"
+ ITA_modify_justify_war_goal_time_effect_TT: "§YUzasadnij czas docelowy wojny§!: [?ITA_justify_war_goal_time_change|%-]\n"
+ ITA_modify_supply_consumption_factor_effect_TT: "§YZużycie zaopatrzenia armii§!: [?ITA_supply_consumption_factor_change|%-]\n"
+ ITA_modify_navy_fuel_consumption_factor_effect_TT: "§YZużycie paliwa w marynarce wojennej§!: [?ITA_navy_fuel_consumption_factor_change|%-]\n"
+ ITA_modify_navy_max_range_factor_TT: "§YZakres Marynarki Wojennej§!: [?ITA_navy_max_range_factor_change|%+]\n"
+ ITA_modify_production_factory_max_efficiency_factor_TT: "§YLimit wydajność produkcji§!: [?ITA_production_factory_max_efficiency_factor_change|%+]\n"
+ ITA_modify_production_factory_efficiency_gain_factor_TT: "§YWzrost wydajności produkcji§!: [?ITA_production_factory_efficiency_gain_factor_change|%+]\n"
+ ITA_modify_license_production_speed_TT: "§YSzybkość produkcji licencjonowanego sprzętu§!: [?ITA_license_production_speed_change|%+]\n"
+ ITA_modify_send_volunteer_divisions_required_effect_TT: "§YMaksymalna liczba dywizji ochotników§!: [?ITA_send_volunteer_divisions_required_change|%-]\n"
+ ITA_modify_air_volunteer_cap_effect_TT: "§YSamoloty ochotnicze Max Air§!: [?ITA_air_volunteer_cap_change|+]\n"
+ ITA_modify_send_volunteer_factor_effect_TT: "§YDywizje potrzebne do wysłania sił ochotniczych§!: [?ITA_send_volunteer_factor_change|%+]\n"
+ ITA_modify_experience_gain_army_effect_TT: "§YZdobywanie doświadczenia armii§!: [?ITA_experience_gain_army_change|+] Daily\n"
+ ITA_modify_cas_damage_reduction_TT: "§YRedukcja szkód w stosunku do CAS§!: [?ITA_cas_damage_reduction_change|%+]\n"
+ ITA_modify_air_superiority_bonus_in_combat_TT: "§YPremia za przewagę w powietrzu w walce§!: [?ITA_air_superiority_bonus_in_combat_change|%+]\n"
+ ITA_modify_air_air_superiority_attack_factor_TT: "§YAtak na misję przewagi powietrznej§!: [?ITA_air_air_superiority_attack_factor_change|%+]\n"
+ ITA_modify_air_air_superiority_agility_factor_TT: "§YPrzewaga radaru w misji przewagi w powietrzu§!: [?ITA_air_air_superiority_agility_factor_change|%+]\n"
+ ITA_modify_air_close_air_support_org_damage_factor_TT: "§YCAS Szkoda dla organizacji§!: [?ITA_air_close_air_support_org_damage_factor_change|%+]\n"
+ ITA_modify_air_cas_efficiency_TT: "§YSkuteczność bliskiego wsparcia powietrznego§!: [?ITA_air_cas_efficiency_change|%+]\n"
+ ITA_modify_air_strategic_bomber_bombing_factor_TT: "§YNaloty strategiczne§!: [?ITA_air_strategic_bomber_bombing_factor_change|%+]\n"
+ ITA_modify_industry_air_damage_factor_TT: "§YLuka w bombie fabrycznej§!: [?ITA_industry_air_damage_factor_change|%-]\n"
+ ITA_modify_foreign_influence_modifier_TT: "§YWpływy zagraniczne§!: [?ITA_foreign_influence_modifier_change|%+]\n"
+ ITA_modify_foreign_influence_defense_modifier_TT: "§YObrona przed wpływami zagranicznymi§!: [?ITA_foreign_influence_defense_modifier_change|%+]\n"
+ ITA_modify_subjects_autonomy_gain_TT: "§YDzienny spadek autonomii podmiotu§!: [?ITA_subjects_autonomy_gain_change|-]\n"
+ ITA_modify_max_command_power_TT: "§YMaksymalna moc dowodzenia§!: [?ITA_max_command_power_change|+]\n"
+ ITA_modify_transport_capacity_TT: "§YWymagania dotyczące konwoju żołnierzy§!: [?ITA_transport_capacity_change|%-]\n"
+ ITA_modify_agricolture_productivity_modifier_effect_TT: "§YProduktywność rolnictwa§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
+ ITA_modify_civilian_factories_productivity_effect_TT: "§YProduktywność fabryk cywilnych§!: [?ITA_civilian_factories_productivity_change|%+]\n"
+ ITA_modify_military_factories_productivity_effect_TT: "§YProduktywność fabryk wojskowych§!: [?ITA_military_factories_productivity_change|%+]\n"
+ ITA_modify_dockyard_productivity_effect_TT: "§YProduktywność stoczni§!: [?ITA_dockyard_productivity_change|%+]\n"
+ ITA_modify_offices_productivity_effect_TT: "§YProduktywność biur§!: [?ITA_offices_productivity_change|%+]\n"
+ ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YPotrzebna siła robocza do fabryk cywilnych§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YPotrzebna siła robocza dla fabryk wojskowych§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YPotrzebni pracownicy biurowi§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_energy_gain_TT: "§YWytworzona moc§!: [?ITA_energy_gain_change|+] GW\n"
  ITA_civil_war_partisan_activity: "Działalność partyzancka"
  ITA_civil_war_partisan_activity_TT: "Jak można było się spodziewać po tak powodującym podziały konflikcie, znaczna część ludności cywilnej, choć nie walczy bezpośrednio, zapewnia informacje wywiadowcze, zaopatrzenie, schronienie i ochronę żołnierzom strony, której sympatyzuje."
  xylella_epidemic: "Epidemia Xylelli"
@@ -2202,7 +2202,6 @@
  ITA_draw_closer_to_far_east_TT: "Rośnie nasze wpływy na Dalekim Wschodzie.\n §YWszystkie kraje wspomniały o wzroście wpływów, w największym stopniu Chiny§!\n"
  ITA_reform_approval_TT: "Pomimo tego, że jest to główny kraj zachodni, mający silne powiązania kulturowe z USA i Europą, włoska kultura polityczna i gospodarcza jest znacznie bardziej podobna do kultury kraju Ameryki Południowej, takiego jak Argentyna, z poglądami peronistycznymi i neokeynesowskimi dominującymi we wszystkich partiach, nawet tych którzy reklamują się jako liberałowie. Z tego powodu jakakolwiek próba liberalizacji zostanie z trudem przetrawiona przez społeczeństwo, chyba że w dominującej kulturze nastąpi zasadnicza zmiana."
  ITA_unlock_policy_decision_TT: "To skupienie odblokuje decyzję o przyjęciu powiązanej polityki."
- ITA_modify_reform_expectance_effect_TT: "§YReform Expectance§!: [?drift_switch_change|3+]\n"
  ITA_ruling_party_popularity_change_decision_TT: "Zmiana popularności partii spowodowana tą decyzją zależy od aktualnej partii rządzącej."
  ITA_tax_evasion_TT: "Zmniejsz §YDochody podatkowe§! o §R10%§!\n"
  ITA_building_abuse_TT: "Zmniejsz §YDochody podatkowe§! przez §R5%§!\n"
@@ -2522,9 +2521,10 @@
  ITA_tech_deal: "Umowa techniczna"
  ITA_restart_otomatic_development: "Uruchom ponownie program OTOMATIC"
  ITA_restart_otomatic_development_desc: "Uruchom ponownie program OTOMATIC"
- ITA_treaty_of_benghazi_TT: "The §YTreaty of Benghazi§! has been signed with [LBA.GetNameWithFlag]"
+ ITA_treaty_of_benghazi_TT: "§YTkt Bengazi§! został podpisany z [LBA.GetNameWithFlag]"
  ITA_modify_article_18: "Zmień artykuł 18"
  ITA_modify_article_18_desc: "Artykuł 18 Statutu pracownika niezwykle utrudnia pracodawcom zwalnianie pracowników, w związku z czym ucierpiał na tym nasz rynek pracy. Jego modyfikacja z pewnością wywoła oskarżenia opozycji o „pracę przymusową” i „niewolnictwo”, ale w rzeczywistości jest to tylko zdrowy rozsądek."
  ITA_modify_article_18_decision: "Zmień artykuł 18"
  ITA_modify_article_18_decision_desc: "Artykuł 18 Statutu pracownika niezwykle utrudnia pracodawcom zwalnianie pracowników, w związku z czym ucierpiał na tym nasz rynek pracy. Jego modyfikacja z pewnością wywoła oskarżenia opozycji o „pracę przymusową” i „niewolnictwo”, ale w rzeczywistości jest to tylko zdrowy rozsądek."
  ITA_modify_article_18_decision_repeal: "Wycofać zmiany w artykule 18"
+ ITA_modify_reform_expectancy_effect_TT: "§YOczekiwania reform§!: [?drift_switch_change|3+]\n"
