--- a/localisation/russian/MD_focus_BLR_l_russian.yml
+++ b/localisation/russian/MD_focus_BLR_l_russian.yml
@@ -426,7 +426,7 @@
  BLR_Adopt_EU_Intellectual: "Принять законы ЕС об интеллектуальной собственности"
  BLR_Adopt_EU_Intellectual_desc: "Необходимо принять законы ЕС об интеллектуальной собственности, чтобы соответствовать европейским стандартам в этой области"
  BLR_Digitalization: "Оцифровка"
- BLR_Digitalization_desc: "Необходимо оцифровать производство, чтобы улучшить его качество"
+ BLR_Digitalization_desc: "Необходимо оцифровать производство, чтобы повысить его качество."
  BLR_political_platforms: "Создание политических платформ для иностранных компаний"
  BLR_political_platforms_desc: "Возможно, нам следует разрешить это иностранным компаниям?"
  BLR_Custom_Institutional_reforms: "Биотопливо"
