--- a/localisation/russian/MD_focus_ITA_l_russian.yml
+++ b/localisation/russian/MD_focus_ITA_l_russian.yml
@@ -2457,19 +2457,19 @@
  ITA_tech_deal: "Техническая сделка"
  ITA_restart_otomatic_development: "Перезапуск разработки OTOMATIC"
  ITA_restart_otomatic_development_desc: "Перезапуск разработки OTOMATIC"
- ITA_modify_additional_expenses_effect_TT: "This will modify our weekly expenses by: [?additional_expenses_change|-] bilions\n"
- ITA_modify_nimby_modifier_effect_TT: "This will modify the effect of NIMBYs by: [?nimby_culture_change|%+]\n"
- ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§YTax Revenue Multiplier§!: [?ITA_tax_gain_multiplier_modifier_change|%+] \n"
+ ITA_modify_additional_expenses_effect_TT: "Это изменит наши еженедельные расходы на: [?additional_expenses_change|-] миллиардов\n"
+ ITA_modify_nimby_modifier_effect_TT: "Это изменит эффект NIMBY на: [?nimby_culture_change|%+]\n"
+ ITA_modify_tax_gain_multiplier_modifier_effect_TT: "§YМультипликатор налоговых доходов§!: [?ITA_tax_gain_multiplier_modifier_change|%+] \n"
  ITA_modify_interest_rate_multiplier_modifier_effect_TT: "§YПроцентная ставка§!: [?ITA_interest_rate_multiplier_modifier_change|-] %\n"
  ITA_modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§YРасходы на бюрократию§!: [?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
  ITA_modify_police_cost_multiplier_modifier_effect_TT: "§YРасходы на полицию§! [?ITA_police_cost_multiplier_modifier_change|%-]\n"
  ITA_modify_education_cost_multiplier_modifier_effect_TT: "§YРасходы на образование§!: [?ITA_education_cost_multiplier_modifier_change|%-]\n"
  ITA_modify_health_cost_multiplier_modifier_effect_TT: "§YРасходы на здравоохранение§!: [?ITA_health_cost_multiplier_modifier_change|%-]\n"
  ITA_modify_social_cost_multiplier_modifier_effect_TT: "§YСтоимость социальных расходов§!: [?ITA_social_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_army_personnel_cost_multiplier_modifier_effect_TT: "§YArmy Wages§!: [?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§YNavy Wages§!: [?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_airforce_personnel_cost_multiplier_modifier_effect_TT: "§YAirforce Wages§!: [?ITA_airforce_personnel_cost_multiplier_modifier_change|%-]\n"
- ITA_modify_equipment_cost_multiplier_modifier_effect_TT: "§YArmy Equipment Cost§!: [?ITA_equipment_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_army_personnel_cost_multiplier_modifier_effect_TT: "§YЗаработная плата в армии§!: [?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§YЗарплата военно-морского флота§!: [?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_airforce_personnel_cost_multiplier_modifier_effect_TT: "§YЗарплата в ВВС§!: [?ITA_airforce_personnel_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_equipment_cost_multiplier_modifier_effect_TT: "§YСтоимость армейского снаряжения§!: [?ITA_equipment_cost_multiplier_modifier_change|%-]\n"
  ITA_modify_global_building_slots_factor_effect_TT: "§YМаксимум фабрик в регионе§!: [?ITA_global_building_slots_factor_change|%+]\n"
  ITA_modify_MONTHLY_POPULATION_effect_TT: "§YЕжемесячный прирост населения§!: [?ITA_MONTHLY_POPULATION_change|%+]\n"
  ITA_modify_production_speed_buildings_factor_effect_TT: "§YСкорость строительства§!: [?ITA_production_speed_buildings_factor_change|%+]\n"
@@ -2481,7 +2481,7 @@
  ITA_modify_repair_speed_factor_effect_TT: "§YСкорость ремонта ВМФ§!: [?ITA_repair_speed_factor_change|%+]\n"
  ITA_modify_refit_speed_effect_TT: "§YСкорость переоборудования ВМФ§!: [?ITA_refit_speed_change|%+]\n"
  ITA_modify_positioning_effect_TT: "§YРазмещение§!: [?ITA_positioning_change|%+]\n"
- ITA_modify_screening_without_screens_effect_TT: "§YScreening without Screens§!: [?ITA_screening_without_screens_change|%+]\n"
+ ITA_modify_screening_without_screens_effect_TT: "§YПоказ без экранов§!: [?ITA_screening_without_screens_change|%+]\n"
  ITA_modify_org_loss_when_moving_effect_TT: "§YПотеря организации при движении§!: [?ITA_org_loss_when_moving_change|%-]\n"
  ITA_modify_army_attack_factor_effect_TT: "§YАтака дивизии§!: [?ITA_army_attack_factor_change|%+]\n"
  ITA_modify_army_defence_factor_effect_TT: "§YЗащита дивизии§!: [?ITA_army_defence_factor_change|%+]\n"
@@ -2496,35 +2496,35 @@
  ITA_modify_production_factory_efficiency_gain_factor_TT: "§YРост эффективности производства§!: [?ITA_production_factory_efficiency_gain_factor_change|%+]\n"
  ITA_modify_license_production_speed_TT: "§YСкорость производства лицензионного оборудования§!: [?ITA_license_production_speed_change|%+]\n"
  ITA_modify_send_volunteer_divisions_required_effect_TT: "§YМаксимальное количество добровольческих дивизий§!: [?ITA_send_volunteer_divisions_required_change|%-]\n"
- ITA_modify_air_volunteer_cap_effect_TT: "§YMax Air Volunteer Planes§!: [?ITA_air_volunteer_cap_change|+]\n"
- ITA_modify_send_volunteer_factor_effect_TT: "§YDivisions Required for Sending Intervention Forces§!: [?ITA_send_volunteer_factor_change|%+]\n"
- ITA_modify_experience_gain_army_effect_TT: "§YArmy Experience Gain§!: [?ITA_experience_gain_army_change|+] Daily\n"
- ITA_modify_cas_damage_reduction_TT: "§YDamage Reduction Against CAS§!: [?ITA_cas_damage_reduction_change|%+]\n"
- ITA_modify_air_superiority_bonus_in_combat_TT: "§YAir Superiority Bonus in Combat§!: [?ITA_air_superiority_bonus_in_combat_change|%+]\n"
- ITA_modify_air_air_superiority_attack_factor_TT: "§YAir Superiority Mission Attack§!: [?ITA_air_air_superiority_attack_factor_change|%+]\n"
- ITA_modify_air_air_superiority_agility_factor_TT: "§YAir Superiority Mission Radar Advantage§!: [?ITA_air_air_superiority_agility_factor_change|%+]\n"
- ITA_modify_air_close_air_support_org_damage_factor_TT: "§YCAS Damage to Organization§!: [?ITA_air_close_air_support_org_damage_factor_change|%+]\n"
- ITA_modify_air_cas_efficiency_TT: "§YClose Air Support Efficiency§!: [?ITA_air_cas_efficiency_change|%+]\n"
- ITA_modify_air_strategic_bomber_bombing_factor_TT: "§YStrategic Bombing§!: [?ITA_air_strategic_bomber_bombing_factor_change|%+]\n"
- ITA_modify_industry_air_damage_factor_TT: "§YIndustry Bomb Vulnerability§!: [?ITA_industry_air_damage_factor_change|%-]\n"
- ITA_modify_foreign_influence_modifier_TT: "§YForeign Influence§!: [?ITA_foreign_influence_modifier_change|%+]\n"
- ITA_modify_foreign_influence_defense_modifier_TT: "§YForeign Influence Defense§!: [?ITA_foreign_influence_defense_modifier_change|%+]\n"
- ITA_modify_subjects_autonomy_gain_TT: "§YDaily Subject Autonomy Decrease§!: [?ITA_subjects_autonomy_gain_change|-]\n"
- ITA_modify_max_command_power_TT: "§YMax Command Power§!: [?ITA_max_command_power_change|+]\n"
- ITA_modify_transport_capacity_TT: "§YTroop Convoy Requirement§!: [?ITA_transport_capacity_change|%-]\n"
- ITA_modify_agricolture_productivity_modifier_effect_TT: "§YAgriculture Productivity§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
- ITA_modify_civilian_factories_productivity_effect_TT: "§YCivilian Factories Productivity§!: [?ITA_civilian_factories_productivity_change|%+]\n"
- ITA_modify_military_factories_productivity_effect_TT: "§YMilitary Factories Productivity§!: [?ITA_military_factories_productivity_change|%+]\n"
- ITA_modify_dockyard_productivity_effect_TT: "§YDockyards Productivity§§!: [?ITA_dockyard_productivity_change|%+]\n"
- ITA_modify_offices_productivity_effect_TT: "§YOffices Productivity§§!: [?ITA_offices_productivity_change|%+]\n"
- ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YCivilian Factories Workforce Required§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YMilitary Factories Workforce Required§§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
- ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YOffices Workforce Required§§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
- ITA_modify_energy_gain_TT: "§YPower Generated§!: [?ITA_energy_gain_change|+] GW\n"
- ITA_modify_reform_expectance_effect_TT: "§YReform Expectance§!: [?drift_switch_change|3+]\n"
- ITA_treaty_of_benghazi_TT: "The §YTreaty of Benghazi§! has been signed with [LBA.GetNameWithFlag]"
+ ITA_modify_air_volunteer_cap_effect_TT: "§YСамолеты-добровольцы Max Air§!: [?ITA_air_volunteer_cap_change|+]\n"
+ ITA_modify_send_volunteer_factor_effect_TT: "§YДивизии, необходимые для отправки сил вмешательства§!: [?ITA_send_volunteer_factor_change|%+]\n"
+ ITA_modify_experience_gain_army_effect_TT: "§YПрирост армейского опыта§!: [?ITA_experience_gain_army_change|+] Daily\n"
+ ITA_modify_cas_damage_reduction_TT: "§YСнижение урона от CAS§!: [?ITA_cas_damage_reduction_change|%+]\n"
+ ITA_modify_air_superiority_bonus_in_combat_TT: "§YБонус за превосходство в воздухе в бою§!: [?ITA_air_superiority_bonus_in_combat_change|%+]\n"
+ ITA_modify_air_air_superiority_attack_factor_TT: "§YАтака миссии превосходства в воздухе§!: [?ITA_air_air_superiority_attack_factor_change|%+]\n"
+ ITA_modify_air_air_superiority_agility_factor_TT: "§YПреимущество радара миссии превосходства в воздухе§!: [?ITA_air_air_superiority_agility_factor_change|%+]\n"
+ ITA_modify_air_close_air_support_org_damage_factor_TT: "§YУщерб CAS для организации§!: [?ITA_air_close_air_support_org_damage_factor_change|%+]\n"
+ ITA_modify_air_cas_efficiency_TT: "§YЭффективность непосредственной авиационной поддержки§!: [?ITA_air_cas_efficiency_change|%+]\n"
+ ITA_modify_air_strategic_bomber_bombing_factor_TT: "§YСтратегические бомбардировки§!: [?ITA_air_strategic_bomber_bombing_factor_change|%+]\n"
+ ITA_modify_industry_air_damage_factor_TT: "§YУязвимость промышленной бомбы§!: [?ITA_industry_air_damage_factor_change|%-]\n"
+ ITA_modify_foreign_influence_modifier_TT: "§YИностранное влияние§!: [?ITA_foreign_influence_modifier_change|%+]\n"
+ ITA_modify_foreign_influence_defense_modifier_TT: "§YЗащита от иностранного влияния§!: [?ITA_foreign_influence_defense_modifier_change|%+]\n"
+ ITA_modify_subjects_autonomy_gain_TT: "§YЕжедневное снижение автономности субъектов§!: [?ITA_subjects_autonomy_gain_change|-]\n"
+ ITA_modify_max_command_power_TT: "§YМаксимальная командная мощность§!: [?ITA_max_command_power_change|+]\n"
+ ITA_modify_transport_capacity_TT: "§YТребование к конвою войск§!: [?ITA_transport_capacity_change|%-]\n"
+ ITA_modify_agricolture_productivity_modifier_effect_TT: "§YПроизводительность сельского хозяйства§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
+ ITA_modify_civilian_factories_productivity_effect_TT: "§YПроизводительность гражданских заводов§!: [?ITA_civilian_factories_productivity_change|%+]\n"
+ ITA_modify_military_factories_productivity_effect_TT: "§YПроизводительность военных заводов§!: [?ITA_military_factories_productivity_change|%+]\n"
+ ITA_modify_dockyard_productivity_effect_TT: "§YПроизводительность верфей§!: [?ITA_dockyard_productivity_change|%+]\n"
+ ITA_modify_offices_productivity_effect_TT: "§YОфисы Производительность§!: [?ITA_offices_productivity_change|%+]\n"
+ ITA_modify_civ_facs_worker_requirement_modifier_effect_TT: "§YТребуется рабочая сила для гражданских заводов§!: [?ITA_civ_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_mil_facs_worker_requirement_modifier_effect_TT: "§YТребуется рабочая сила на военные заводы§!: [?ITA_mil_facs_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_offices_worker_requirement_modifier_effect_TT: "§YТребуются сотрудники в офисы§!: [?ITA_offices_worker_requirement_modifier_change|%-]\n"
+ ITA_modify_energy_gain_TT: "§YГенерируемая мощность§!: [?ITA_energy_gain_change|+] ГВт\n"
+ ITA_treaty_of_benghazi_TT: "§YБенгазский договор§! подписан с помощью [LBA.GetNameWithFlag]"
  ITA_modify_article_18: "Изменить статью 18"
  ITA_modify_article_18_desc: "Статья 18 Статута работников чрезвычайно затрудняет работодателям увольнение своих сотрудников, и соответственно пострадал наш рынок труда. Его изменение, несомненно, послужит толчком для обвинений оппозиции в «принудительном труде» и «рабстве», но на самом деле это всего лишь здравый смысл."
  ITA_modify_article_18_decision: "Изменить статью 18"
  ITA_modify_article_18_decision_desc: "Статья 18 Статута работников чрезвычайно затрудняет работодателям увольнение своих сотрудников, и соответственно пострадал наш рынок труда. Его изменение, несомненно, послужит толчком для обвинений оппозиции в «принудительном труде» и «рабстве», но на самом деле это всего лишь здравый смысл."
  ITA_modify_article_18_decision_repeal: "Откатить изменения статьи 18"
+ ITA_modify_reform_expectancy_effect_TT: "§YОжидание реформ§!: [?drift_switch_change|3+]\n"
