--- a/localisation/russian/tank_modules_l_russian.yml
+++ b/localisation/russian/tank_modules_l_russian.yml
@@ -489,8 +489,8 @@
  automatic_loading_desc: "В системе автозарядки, обычно используемой на советских и российских танках, механический подъемник автоматически втягивает новый патрон в пушку. Поэтому снаряды часто хранятся в барабане под пушкой или рядом с ней. В танке с автозагрузчиком экипаж вынужден делить отделение с боевыми патронами. Хотя автозарядка дает гораздо лучшую скорострельность, чем ручная загрузка, проникающее попадание часто приводит к сгоранию боеприпасов и сгоранию танка и его экипажа.\n\n§GПодсказка к редактору: Автозарядка дает возможность вести более длительный огонь по целям, но увеличивает вероятность полной потери машины при повреждении§!"
  manual_loading: "Ручное заряжение"
  manual_loading_desc: "Человек-погрузчик. Хороший погрузчик способен даже в зависимости от условий опередить обычный карусельный автозагрузчик. Концепция четвертого члена экипажа во многом сохранилась на протяжении веков благодаря дополнительной паре рук, которую погрузчик предоставляет для обслуживания в полевых условиях.\n\n§GПодсказка к редактору: Автозарядка дает возможность вести более длительный огонь по целям, но увеличивает вероятность полной потери машины при повреждении§!"
- revolver_magazine: "Револьверное заряжение"
- revolver_magazine_desc: "Автомат заряжания в корме башни. Быстрее и безопаснее, чем карусельный автозагрузчик. Основным недостатком системы является ее высокая цена.\n\n§автомат заряжания револьвера — лучший вариант для вашего танка, если вы готовы заплатить дополнительную цену§!"
+ revolver_magazine: "Револьвер-автозагрузчик"
+ revolver_magazine_desc: "Турельный автомат заряжания. Быстрее и безопаснее, чем карусельный автозагрузчик. Главный недостаток системы – ее дорогая цена.\n\n§GПодсказка к редактору: Автомат заряжания револьвера — лучший вариант для вашего танка, если вы готовы заплатить дополнительную цену.§!"
  hardkill_system_gen1: "Ранняя система активной защиты"
  hardkill_system_gen1_desc: "Система активной защиты - это оборонительная система, установленная на танке. Система обнаруживает входящие снаряды и отражает их своим собственным. Противодействующим снарядом может быть ракета, реактивный снаряд или кинетический снаряд. Ранние системы \"хард-килл\" в основном защищали танк от кумулятивных зарядов.\n\n§GПодсказка к редактору: Система активной защиты - это хороший способ усилить броню наших танков, чтобы она стали крепче§!"
  hardkill_system_gen2: "Улучшенная система активной защиты"
@@ -1062,7 +1062,7 @@
  ITA_mbt_hull_4: "Корпус танка 5-го поколения"
  ITA_mbt_hull_4_desc: "Танк будущего. Основные боевые танки становятся все менее грозными противниками по мере быстрого развития противотанкового оружия и перехода веса в бою к воздушным силам. Для того чтобы танки сохранились как действенные варианты в будущих войнах, необходимо полностью переосмыслить их конструкцию и роль."
  USA_tank_small_medium_cannon: "105 mm M68"
- USA_tank_medium_cannon_1: "120-мм пушка М5"
+ USA_tank_medium_cannon_1: "120-мм М5"
  USA_tank_medium_cannon_2: "120 mm M256"
  USA_tank_medium_cannon_3: "120 mm M360"
  USA_additional_machine_guns: "M2HB"
